Update VOCUS 2022-04-04 patch

--- a/_posts/2022-01-03-VOCUS-台灣未來的分歧點-10.html
+++ b/_posts/2022-01-03-VOCUS-台灣未來的分歧點-10.html
@@ -9,7 +9,7 @@ author: 王立第二戰研所
 ---
 
 <blockquote>坦白說，這種想法很不可取，每個人都是為了自己的利益而活，在不影響自己的情況下推己及人，若可以為了整體利益，自己略有犧牲也不是不行。但這種交換，通常都需要基層的知識分子，筆者前幾篇提過的在地頭人，用自己的信用去說服心懷疑慮的一般人。</blockquote>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/616b8889fd897800012001e8">台灣未來的分歧點（9） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/f2ef3af5-76bb-4fc4-9305-f70f5610a369.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">在我們走到命運的分歧點前，總是有無數的可能，直到時機來臨時才會收束到幾條路上。每一個人都在其中扮演腳色，並希望走到他要的道路上，我們該思考的，難道就是在所剩不多的選擇中，抱怨「這條路我不喜歡，我決定跟你唱反調」？ 政治實務, 教育改革, 共同體打造, 政治正確, 高度信任社會, 願景, 水庫, 影響, 問題, 成本, 政治, 台灣, 自殺炸彈</figcaption>
 <p>信任出現危機是很恐怖的，當你我之間不再信任，凡事都要上法院，還得要擔心法官會不會收錢賣掉你，這社會怎麼運作？</p>
 <p>而信任危機的根本，來自於自私。</p>
 <p>自私很難判定，但我們可以自己檢視一下，你是不是凡事都覺得自己吃虧？男女交往連吃飯付帳的帳本都要結清？結婚後洗碗次數要精算？真走到這步，關係還能維持下去也算厲害了。</p>
@@ -24,7 +24,7 @@ author: 王立第二戰研所
 <p>美國為何出狀況？主因還是打著科學的新興宗教太多，用科學當名義，要你閉嘴乖乖接受他的指揮的高階級越來越多。而這些高階級的菁英，表現出的與其說是為民服務，不如說為了奪權，打的科學名號真的很科學？至少就筆者這種有牌科學家的角度來看，大多數都禁不起考驗。</p>
 <p>或者說，從科學證據到形成政策之間，有非常一大段的路要走，美國這20年的菁英，卻利用傳統上對菁英階級的信任，大肆收攏權力。在台灣卻很難形成美國的狀況，不是沒有新一代菁英，也不是我們比美國否定科學，而是我們的階級上下被打的很零碎。</p>
 <p>但年輕菁英的興起，另一方面也正好說明，近年我們越來越不重視人與人的溝通，強調的溝通往往是上對下的指導、教育。坦白說啦，就筆者的角度來看，這才是所謂的國民黨回魂，近年的年輕菁英無論藍綠出身，求學背景有多像就先不說，做事手腕幾乎一模一樣倒是真的。</p>
-<p><br></p>
+<img src="https://images.unsplash.com/photo-1483213097419-365e22f0f258"><figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">Brendan Church on Unsplash</figcaption>
 <p>我們走在分歧點之前，要決定的不是統獨，而是要走到社會是否原子化這條路。</p>
 <p>決定走向原子化與否的前提，不是彼此不信任（編按：這某程度上是副產物），是技術能否支撐社會進行這樣的變化。台灣並非一個資源超豐富的國家，再加上強敵窺伺的前提因素，實在不能說有餘裕可以這樣作。</p>
 <p>而原子化的下一步，是國家、社會組織的重塑，這過程可能要花幾十年，歐美進行了20年不到就已經到處撞壁，極端民族主義逐漸興起。</p>
@@ -35,7 +35,7 @@ author: 王立第二戰研所
 <p>對政治介入太淺？對，我們對政治表像很狂熱，但對實際運作一點都不想理解，總以為可以依靠特定法規、某個法案通過，全國風行景從，想太美好了。</p>
 <p>看到海龜鼻子插吸管，激烈到禁止全國使用吸管，卻沒人告訴大家，台灣是一個塑膠回收率極高的國家，日用塑膠垃圾流到大海的比例已經低的可以。這代表什麼？代表我們對於理論的優劣激烈辯駁，卻不去看看現實運作走到哪。</p>
 <p>一方面，希望所有的廢棄物都能妥善處理，另一方面處理廢棄物的技術百般阻擋，只因為覺得處理廢棄物必然會亂搞。</p>
-<p>《拉麵王》，第一集，187頁（右）、190頁（左）。久部綠郎原作，河合單作畫，東立。</p>
+<img src="https://images.vocus.cc/f63f93dc-1e92-4fea-8b85-493b4f8b2681.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">《拉麵王》，第一集，187頁（右）、190頁（左）。久部綠郎原作，河合單作畫，東立。</figcaption>
 <p>為何如此不信任？因為不去了解現狀運作的邏輯。不去了解產業運作的邏輯，不去理解政治工作運轉的邏輯，大家都是憑感覺。</p>
 <p>這樣下去，階級抹平了，卻沒有可以信任的對象，各位會以為這種值得信任的人很容易出現，只要看媒體宣傳就好？反過來說，你就是把權力交給傳媒，如同現在美國的狀況，無條件相信各大新聞媒體的人有多少，認定討厭的新聞台絕對在造假的人有多少？</p>
 <h3>「終極解決」只是己願他力，協商務實方能解決分歧</h3>
@@ -43,7 +43,7 @@ author: 王立第二戰研所
 <p>千萬不要陷入，可以徹底解決問題的A方案，絕對比妥協下只能部分解決的B方案更好的迷思。</p>
 <p>因為，徹底解決問題的A方案，的確可以解決這個問題，卻會製造更多其他的問題。當我們使用徹底解決法，解決了一個又製造了十個，然後再用徹底解決法解決十個，產生新的一百個。這真的比各方妥協下，把問題降低成原本的十分之一，雖不能徹底解決但也不會產生新問題，要來得好嗎？</p>
 <p>社會是整體，大家都是互相，你要的「身心絕對安全」一定會建立在其他人的不安全或其他成本上，如果不能明白此點，持續相信有終極解決方案的道路，那麼我們在這分歧點上，最終走向的就是極權，差別只是右邊還左邊而已。（編按：比如說你要河川下游取水絕對安全，一定會影響上游產業、住宅區的成本；你要開車上路絕對安全，最終解決方案可能是路上不要有其他人車隨便你開）</p>
-<p>在非歐幾何之中，兩條符合平行公設的線也可能會相交，如同地球的經線。左右翼大抵如此。（來源：Commons）<a href="https://commons.wikimedia.org/wiki/File:Latitude_and_longitude_graticule_on_an_ellipsoid.svg">Commons</a>）</p>
+<img src="https://images.vocus.cc/734044e7-2010-47f8-bde7-938019d40773.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">在非歐幾何之中，兩條符合平行公設的線也可能會相交，如同地球的經線。左右翼大抵如此。（來源：Commons）<a href="https://commons.wikimedia.org/wiki/File:Latitude_and_longitude_graticule_on_an_ellipsoid.svg">Commons</a>）</figcaption>
 <p>然後，我們也不要幻想，在民主政治的台灣裡，自己是一個極權政府中的上層，可以任意處置下層。別說你鍾愛的某某政治人物不會這樣想，去看他的手腕，哪一條不是迎合選民「當大爺」的心態？</p>
 <p>會這樣幻想自己已經是上層，卻連傾聽同胞意見都不願意，不過就是躺在那什麼都不作，被動等待世界改變、鈔票會從天上掉下來的憤青罷了。</p>
 <p><br>
