--- a/_posts/2022-01-05-VOCUS-戰略學進階-陣形-6-進入火槍時代-陣形與射程的相關性.html
+++ b/_posts/2022-01-05-VOCUS-戰略學進階-陣形-6-進入火槍時代-陣形與射程的相關性.html
@@ -10,7 +10,7 @@ author: 王立第二戰研所
 
 <p>冷兵器時代的陣型，某種程度上可以預測到對應的變化結果，還算是相當有趣。常見的縱陣轉橫陣，橫陣轉變為半包圍或是反過來的圓陣陣型，極為考驗將領的統御力，更可以看出一個國家的國力，以及政治管理技術的優劣。</p>
 <p>但這些進入到火槍時代後，開始有了一些變化，怎樣的變化？</p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/616f39d5fd89780001335b44">戰略學進階──陣形（1）：橫陣的基礎 | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/e96aad55-0054-42d2-9ad9-d1a92c2ddea2.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">陣形，是談論戰略中的戰術，必然會提到的部分，而戰術組成會影響到戰略指導，所以避談陣形是不妥的。但陣形要怎樣在戰略中解釋，並將之融會貫通成一套戰略思想？ 陣形, 戰術, 戰略, 橫陣, 攻擊正面, 王立第二戰研所, 戰略, 士兵, 部隊, 基礎, 時間, 攻擊, 訓練, 兵力, 討論, 行程</figcaption>
 <ul>
   <li>編：建議新讀者先從冷兵器時代讀下來，較能掌握歷史演進的脈絡。</li>
 </ul>
@@ -36,16 +36,16 @@ author: 王立第二戰研所
 <h3>延續冷兵器時代的陣形發展</h3>
 <p>雖說如此，陣形也不是退出戰場了，我們認知的各種冷兵器時代出現的陣形，徹底退出戰場是第一次世界大戰的事情。所以，還是可以透過火槍時代的陣形，去學習怎樣思考古人的的布陣邏輯。</p>
 <p>講到這邊，請看下圖，這是火槍剛成為部隊裝備的狀況。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/895f0d45-871d-4117-b3e8-46b8537ae234.jpg">
 <p>火槍在問世後多年，命中率依然是相當不精準的，用此圖來說明就是，進入紅色範圍內有很高的命中率，到了橘色範圍就下降超過一半，黃色範圍就是有打中就不錯，在黃色範圍外會被打到，大概就是禱告不夠虔誠的結果。</p>
 <p>所以組成橫陣後，會像下圖一樣的涵蓋率，但說真的……火槍初期因為結構強度問題，並不適合裝上刀具變成長矛，加上重新裝彈要花時間，除了守住城寨以外，在會戰（野戰）中效果不佳。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/a25ab7b9-8a6a-49a4-b132-4fcc7f23835f.png">
 <p>所以解決方法是什麼？兩種，一種是混編長矛兵做為保護：</p>
-<p><br></p>
+<img src="https://images.vocus.cc/2102f135-9c8e-407b-ab8e-10619d6f6496.png">
 <p>另一種就是擴充火槍兵的數量，如下圖夠壯觀吧。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/0450ceff-1fe8-478f-ac57-7e6d68f2b22f.png">
 <p>但不管怎樣，初期火槍兵需要步兵保護是事實，而數量夠大的火槍隊可以在短時間內造成極大殺傷也是事實，所以比較常見的狀況，火槍隊跟長矛隊會編組在附近，由火槍隊射擊後，算距離交替由長矛隊擋住敵軍進攻。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/1b449475-3ebc-4b2a-9c82-6af09ab3d740.png">
 <p>這是個不大典型的概念式講法，總之就是要有替火槍兵阻擋的步兵，長矛兵會成為這個時代的首選，主要原因還是性價比。訓練有素的騎兵，以及花大錢訓練的專業軍隊很貴的，主力部隊要投入關鍵性戰場。（編：這個玩過AOE2等遊戲的玩家應該很好理解）</p>
 <p>而在這個時代，軍隊動輒數千上萬，會戰的陣形基本上還是跟冷兵器時代類似，只是幾乎都變成橫陣跟要塞據點攻防。不過在每一小隊的戰術陣形上，變化就越來越少了，這不是軍隊戰術退化，是因為武器使用的限制。</p>
 <h3>戰爭的演變是逐漸累積，也不只在戰場上</h3>
