--- a/_posts/2022-01-11-VOCUS-戰略學進階-陣形-7-密集方陣逐漸退出戰場.html
+++ b/_posts/2022-01-11-VOCUS-戰略學進階-陣形-7-密集方陣逐漸退出戰場.html
@@ -9,6 +9,6 @@ author: 王立第二戰研所
 ---
 
 <blockquote>要理解熱兵器時代的陣形，就不能用過去的眼光，認為可以使用各種縱陣、橫陣，如千年前的古人一樣操作戰爭。每一個地圖上的方塊，都是千人以上的部隊，這千人部隊都有數百支槍，好幾隊的線列步兵，勝利一樣是從基礎一步步累積的。只不過，對於軍隊「重量」的定義，已經從人數跟重裝備，逐漸變成火力與大砲數量而已。</blockquote>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/61d4ab73fd89780001885943">戰略學進階──陣形（6）：橫陣的基礎 | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/c271986f-b92a-4696-ad86-8f1163e7331a.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">冷兵器時代的陣型，某種程度上可以預測到對應的變化結果，還算是相當有趣。常見的縱陣轉橫陣，橫陣轉變為半包圍或是反過來的圓陣陣型，極為考驗將領的統御力，更可以看出一個國家的國力，以及政治管理技術的優劣。但這些進入到火槍時代後，開始有了一些變化，怎樣的變化？ 火槍, 火器, 陣形, 戰術, 戰略教學, 戰爭史, 部隊, 十字弓, 戰略, 戰爭, 軍隊, 訓練, 弓箭, 時間, 第一次世界大戰, 生產</figcaption>
 <p>在熱兵器時代開始進入戰場後，密集方陣就開始退出有火器的會戰了，筆者還是再強調一次，這不是瞬間改變，而是根據火器的數量與技術提高，漸進的過程。</p>
 <p>而最早出現的熱兵器，並不是火槍，而是大砲。初期是守城戰，重量太大難以快速運動，等到輕量化的野戰砲可以部署在戰場上，密集方陣的危險性就提高。理由非常簡單，再怎樣加強防禦力的重裝步兵，也無法抵擋砲彈，一發就可以將重裝方陣擊潰，密集陣形的優點在此反而成為缺點。</p>
