--- a/_posts/2022-01-24-VOCUS-軍事事務改革...-的問題-1.html
+++ b/_posts/2022-01-24-VOCUS-軍事事務改革...-的問題-1.html
@@ -11,25 +11,25 @@ author: 王立第二戰研所
 <p>這個系列來談軍事事務改革，個人其實並…沒有很想講，因為複雜的事物要討論出具體的方向，最常出現的問題是：「你在工三小（講<a href="https://www.moedict.tw/%27%E5%95%A5%E6%BD%B2">啥潲</a>）」。</p>
 <p>筆者沒開玩笑，多年下來，每當我們討論A的改革方案，就會跟B的方向產生牴觸，A改的越仔細，B就偏離的更嚴重，若採取ABCDE全盤都顧好的方法，結果就是大家都不滿意。這導致不少人，最後就是一頭栽到某一項目，堅定地認為這是關鍵，不從這開始改一切休提。</p>
 <p>欸，每個人都說自己才是關鍵，這個……</p>
-<p><br></p>
+<img src="https://images.vocus.cc/3d449110-97e2-4857-b8da-439b640e48f3.jpg">
 <h2>現代武器組成精密複雜，專家都會掛一漏萬</h2>
 <p>一般人會說，這就是錢不夠多的問題，確實錢不是問題，沒有錢才是，但在軍事事務改革上，跟平時經驗有一個很大的差異，那就是「時間」。一款武器從設計到量產編制，五年都算超級快的，十年以上並不少見，讀者可以想想，當今世界上被公認最好的一些兵器，哪一款是去年才發售？</p>
 <p>這還跟精密度有關，陸海空軍的各軍種武器，複雜與精密度的落差，更會讓你覺得渾沌不明，亂七八糟到每個都對、每一個都不對。具體點說，就是有時候我們會看到某方面的專家，用他自己「現在」的專業、「當年」的經驗，在談一件「橫跨多年發展」武器的狀況，聽完後去跟業界現在「正在做的人」打聽，常會聽到翻白眼。</p>
 <p>啊？說錯了？不，並不是說這些專家講錯，他們在大方向上的概念是沒錯的，但科技進步的速度……並不快，是複雜度太高導致判斷有誤。呃，這講完應該各位還是不懂，所以這邊稍微比喻一下。</p>
 <p>假設某款武器的關鍵零組件有甲乙丙三款，每一款的技術細節，要從原理到生產都能理解，需要花很久的時間，原理的基礎知識要某科系碩士以上程度，下去碰生產流程，並能抓到生產精度與產出的微小差距，大概一年。</p>
 <p>所以，有位專家過去碰了零組件甲，零組件乙、丙則是跟同行的人常常交流的程度，而他現在離職很久，和他交流乙跟丙這兩項的朋友要嘛離職了，不然就是現役的有保密問題不能透露太多。現在距離這款飛機的開發，從專甲家離職後到正式量產已經又過了十年，這位專家對內情還有多少理解？</p>
-<p>（編輯攝於千葉縣成田航空科學博物館）</p>
+<img src="https://images.vocus.cc/b23b9d71-a909-43fd-868f-21666b5be923.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">（編輯攝於千葉縣成田航空科學博物館）</figcaption>
 <p>通常是對甲這款零組件還是很熟悉，畢竟就做這行的，看一看外觀跟技術資料，大致還是可以推估出甲的現狀如何。但是他對乙丙就會有預估失誤的問題，除非這位專家對老同學、老同事全部都沒失聯，並常常更新資料，還不至於差太多。</p>
 <p>各位有沒發現，要一個長年研究這方面的人，離職後還保持對現在狀況的更新度，已經是相當困難，更不要說是某一方面了。</p>
 <p>那麼，對這款武器的實際戰力會有關鍵影響的零組件有幾項？</p>
 <p>很抱歉，通常超過10幾樣以上，<strong>現代武器的複雜度是乘法，不是加法</strong>。每一款零件對武器戰力的影響若是5%，那麼實際的誤差到整體來說，最低會只剩下60%（數值化比喻不是真的這樣）。所以各位把以上的情況複雜三五倍，就能理解為何就算是專家，很可能對這款武器的理解，依然不能說夠全面。</p>
 <h2>現代戰爭是多位一體作戰，非單一武器決勝負</h2>
 <p>那我們怎麼去評估一款武器的效能？這其實真的很……複雜。現代戰爭是系統戰，不是單一兵器可以決定，就算二次大戰，你要把坦克用到極致，大概要有很多很多的坦克，才足以顛覆戰略性影響。正常讀過戰史的都曉得，即便你坦克威力十足，有敵方兩倍的數量跟實力，若空中優勢完全在敵方，依然是被打好玩的。</p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/5e562d9efd8978000154792e">戰略學入門教學：導論 | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/42e9e606-8c78-4f42-be3e-2da15f6b07cd.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">戰略學看似一門包羅萬象的學問，實際上也接近如此，但這卻讓現代人想學的不得其門而入，已經浸在裡面的則不知未來方向。本系列將是以教學目的，簡化需要大量閱讀才能歸納的重點，將戰略學之複雜轉成易於理解全貌的專欄。 戰略, 戰略教學, 王立第二戰研所, 國際觀點, 戰略, 軍隊, 團體, 思想, 戰爭, 組織, 閱讀, 影響, 資源, 基礎</figcaption>
 <p>現代戰爭的戰術，是依存在系統上，這陣子又看到人在談空地一體戰，筆者是覺得感動，這些軍事專有名詞居然可以從網路上的一般人口中說出（QQ）。雖然這位朋友的理解看來歪很多，但至少可以講出不能只看單一武器，這已經是非常大的進步。</p>
 <p>各位朋友很難體會筆者這種感動，20歲以上的台灣一般人，對軍事事務的理解，以及各式各樣謠言的傳播，完全建立在兩次世界大戰的「電影」上，能有這種進步還能從普通人中說出，表示軍事常識的提昇不是毫無效果，即便是「雀の涙」至少不是零。（編按：麻雀的眼淚，比喻數量極少）</p>
 <p>轉回來，筆者的意思是，就算這款武器的效能，在某一款零組件上有跳躍式的提升，正如中國最常做的宣傳，用特定的方式取得某一部份進展，就吹到打外星的程度，有用嗎？</p>
-<p><br></p>
+<iframe class="embedly-embed" src="https://www.youtube.com/embed/gad1W8EP6PM" scrolling="no" allow="autoplay; fullscreen" allowfullscreen="true" width="740" height="417" frameborder="0"></iframe>
 <p>就算是這種程度的跳躍也沒有什麼用。（影片：中國人民解放軍國防科技大學開發的<a href="https://zh.wikipedia.org/wiki/%E5%85%88%E8%A1%8C%E8%80%85">先行者</a>）</p>
 <p>舉個例子就是，假設台灣拿到最新的引擎技術，國產戰機可以保持超音速巡航的能力，就代表我們可以設定空軍深入中國陸地打擊？</p>
 <p>當然不行啊。麻煩看一下波灣戰爭跟更早的<a href="https://zh.wikipedia.org/zh-tw/%E8%B4%96%E7%BD%AA%E6%97%A5%E6%88%B0%E7%88%AD">贖罪日戰役</a>，為何需要防空飛彈基地，以及各項雷達的配合，預警機的早期發現，甚至是地面情資的回報？</p>
