--- a/_posts/2022-02-13-VOCUS-軍事事務改革-的問題-5.html
+++ b/_posts/2022-02-13-VOCUS-軍事事務改革-的問題-5.html
@@ -11,8 +11,7 @@ author: 王立第二戰研所
 <blockquote>透過夠多的人洗，就是前面說的建立新軍校，或是交流夠多軍官，不管哪一種需要的都是錢。但錢反倒在其次，我們怎樣吸納夠多符合需求的教育人員投入，這會比蓋學校還要難。<br>
 <br>
 政治力介入，更是說來簡單，實際上作不到的事情，用台灣現狀來講就是，親國民黨的軍官大多不想改，親民進黨的軍官……有這種人？</blockquote>
-<p><br></p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/61d7cddcfd897800015a86c0">軍事事務改革......的問題（4） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/41923132-11af-41e9-823e-3c47bed62dc3.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">我們若要成立新軍校，第一個要考量的是，師資跟教學內容，其次才是這些人服役後，會不會遇到舊軍校的抵抗。要消弭舊體制的抵抗，光用說的是沒有用，必須實際上去作一些改變。 軍事改革, 軍事普及, 軍普</figcaption>
 <p>既然洗不乾淨，又換不掉人，好像死路一條是吧？筆者提出問題，不是不提解方，只是希望各位理解，改革軍事這麼龐大的事務，怎麼可能是吃單一顆藥丸就搞定，每一種藥方都只能針對一種病徵，而且很有可能治了左邊換右邊痛。</p>
 <p>對於人事問題，其本質就是教育下一代軍官的體系是封閉的，我們幾乎沒有人提到，官校的教學人員，到底是誰？各位知道嗎，別說官校了，到了今天的國防大學，理論上應該是全國最高的軍事戰略學術單位，裡頭還有人天天背誦孫子兵法，拿這個混飯吃。</p>
 <p>不是說孫子不能唸，而是只想把孫子現代化，這就跟你要把四書五經現代化一樣，做得到再說。還沒做到就想靠這個討生活，你應該去研究單位，不是在第一線荼毒學子。</p>
@@ -21,7 +20,7 @@ author: 王立第二戰研所
 <p>但軍事能力怎麼辦？</p>
 <p>無解。你要短期內改變，這就是必要的犧牲。若不做到這樣，那麼教育部絕對是找一些退役的軍官去編寫教材，依照國內軍事教育的現狀，最後結果會跟現狀差不到哪去。話又說回來，軍官學校隸屬教育部，這全世界先進國家好像也沒多少案例，除非國家的歷史傳承如此。</p>
 <p>故比較合理的做法，是把官校的教材，全部公開透明化，立刻就能檢驗現在所有現役教師的教學能力。也就是透過公開透明，外部對軍方施加壓力，去修改現在的教材與教法。</p>
-<p>電影<a href="https://zh.wikipedia.org/zh-tw/%E8%99%9F%E8%A7%92%E9%9F%BF%E8%B5%B7">《號角響起》</a>畫面截圖</p>
+<img src="https://images.vocus.cc/9f98bb4f-034f-4be8-80aa-e93846840578.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">電影<a href="https://zh.wikipedia.org/zh-tw/%E8%99%9F%E8%A7%92%E9%9F%BF%E8%B5%B7">《號角響起》</a>畫面截圖</figcaption>
 <p>台灣的一個大優勢就是義務役退的軍人幾百萬，軍方如果想要誆騙民眾，說現在這套教法很特別、學長學弟制有必要性等，被民眾拿出來狗幹的機會很高。而透過這種公開法，讓外界可以施壓、介入，要求軍方增設精進教師能力的課程。</p>
 <p>這種作法類似教育部的研習系統，只是更加劇烈而已，政府要強迫打開封閉體系，必定遭遇極大反彈。筆者都可以預料到，光是要求汰除不適任教師的聲浪，就會高到國防部抵制到底。隨便在外面打探就知道現役軍官對軍校教育的抱怨有多少，但我們想想哪種人可以打死不退的窩在軍校，大家心裡有數。</p>
 <h3>可用之兵、可用之將皆不足，人事改革首尾難兼顧</h3>
@@ -37,7 +36,7 @@ author: 王立第二戰研所
 <p>講到這邊，發現問題的人應該漸漸變多了，那就是我們很難同時顧好上跟下，這最終的問題，還是出在可以用的人太少。</p>
 <p>如果整個軍方，都如某些人想得很顢頇，那麼連改都不用改，現狀就不是這樣，而是軍方的既有事務很難處理，複雜的大型公司皆是如此，這會導致太多人的精力耗損在日常，對體制的整體變革興趣缺缺。</p>
 <p>若真事情那麼美好，例如筆者今天當行政院長，電話簿裡面正好就有10個將軍可以在高層改革，100個參謀可以寫報告跟追進度，1000個基層軍官可以推動改變。那當然就做下去了啊，怕啥啊。</p>
-<p><br></p>
+<iframe class="embedly-embed" src="https://www.youtube.com/embed/lGF2QrDLXCM" scrolling="no" allow="autoplay; fullscreen" allowfullscreen="true" width="740" height="417" frameborder="0"></iframe>
 <ul>
   <li>編：院長那麼好當就一直喊衝衝衝就好啦……</li>
 </ul>
