--- a/_posts/2022-02-13-VOCUS-軍事事務改革-的問題-6.html
+++ b/_posts/2022-02-13-VOCUS-軍事事務改革-的問題-6.html
@@ -9,8 +9,7 @@ author: 王立第二戰研所
 ---
 
 <blockquote>如果整個軍方，都如某些人想得很顢頇，那麼連改都不用改，現狀就不是這樣，而是軍方的既有事務很難處理，複雜的大型公司皆是如此，這會導致太多人的精力耗損在日常，對體制的整體變革興趣缺缺。</blockquote>
-<p><br></p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/61d7d015fd897800015a94e8">軍事事務改革......的問題（5） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/9f98bb4f-034f-4be8-80aa-e93846840578.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">對於人事問題，其本質就是教育下一代軍官的體系是封閉的，我們幾乎沒有人提到，官校的教學人員，到底是誰？各位知道嗎，別說官校了，到了今天國防大學，理論上應該是全國最高的軍事戰略學術單位，裡頭還有人天天背誦孫子兵法，拿這個混飯吃。 軍事改革, 軍事普及, 軍普, 政治實務</figcaption>
 <p>其實，上週講到好像超級悲觀無效，但可以說是筆者有點放大了，軍方自成一格到現在，別說民進黨自己仇軍造成的不知兵，連國民黨自己也都如此了。不過換個執政黨，現役高階軍官依法配合，就能打成<a href="https://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=7125&curpage=1&sample=%E5%95%A5&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=10">啥物</a>綠營將領，這種等級比仇軍習慣成自然的民進黨還要糟糕。</p>
 <p>軍事事務改革，筆者講了半天，可以說問題都出在人力不足上，或者說可以用的人不夠。軍事專業非常吃經驗，武器系統還可以勉強說，讓筆者這種理工人半途出家下去，還能保持一定的水準。但需要磨練戰技戰術的部分，這很難透過紙筆考試找出。</p>
 <h3>未受政黨輪替影響，軍隊改革原地踏步</h3>
@@ -24,7 +23,7 @@ author: 王立第二戰研所
 <p>這方式類似外包，國防部要開始大幅擴增文職人員，舉凡寫計畫跟審核都可以。不外包的話，那就是自己增加約聘人員，薪資水準比照公務員，但沒有終身聘來避免出事的人換不掉。</p>
 <p>文職人員增加有何好處？這分兩方面說，第一方面就是很殘酷的現實，軍方不是沒有優秀軍官，只是越優秀負責的事情越多，不用做事的冗員比例當然就會提高。</p>
 <p>這不是什麼黃埔遺毒，而是政治面也要負責，如果執政黨對軍事專業認知不足，三天一小計畫、五天一大規畫，天天都有新報告要寫的情況下，還得要追之前進度跑到哪，那麼不造假，就得要找高手處理。這讓軍方內近20年，能力強到可以寫計畫跟執行與追進度的，都處在過載狀態。</p>
-<p><a href="http://www.ucptt.com/article/Gossiping/1440599879/7DC">來源</a></p>
+<img src="https://images.vocus.cc/933aee0d-9aa0-404e-a8b8-0d1bdea18de4.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><a href="http://www.ucptt.com/article/Gossiping/1440599879/7DC">來源</a></figcaption>
 <p>不要覺得軍隊怎麼這樣，去想想一家大型公司，如果老化到很難評估各部門的產出，就會有這種現象。尤其是當股票上市上櫃，更會出現為了抬高股價，刻意作一些樣子，好像有所改變的去炒新聞拉股價。</p>
 <p>軍方的困擾就在於，能夠一人三化的高手不多，只有一小部分人能做到。但這種人參謀當久了，沒有出去實戰部隊歷練，別說將軍了，連上校都當不到。這就是一種反淘汰機制，能夠滿足歷練升將軍的，其素質很可能達不到我們現在的需求，不是他戰術能力太差，是要作好一個完整的計畫的能力，他本人沒有。</p>
 <p>請各位理解一個現實，會寫好報告的人，跟能當個好將軍的人，能力需求在台灣並非交集。</p>
@@ -32,7 +31,7 @@ author: 王立第二戰研所
 <p>這邊有人會提反論，軍方升遷到一個程度以上，知人善用就是本領，本人可以寫不出好計畫，找很強的幕僚不就是他厲害？</p>
 <p>當然是，筆者沒反對，但這邊說不好聽點，現在的中階以上軍官，當年讀書的平均程度在哪？不要抓幾個特例，筆者問的是平均。</p>
 <p>意思是，絕對有超強的參謀型軍官，將軍會善用就是他的能力也沒錯。但就整體來說，可以寫好計畫、執行計畫、回饋計畫，完成一個有意義的系統性改革，這種人在軍方是鳳毛麟角。也就是真正的狀況，更可能是同一個人反覆被不同的將軍找去用，只要這人離職了，就全部炸開。</p>
-<p>被抓到就做到死（編）</p>
+<img src="https://images.vocus.cc/03187864-6b64-41da-9c18-ac10ccdd66c8.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">被抓到就做到死（編）</figcaption>
 <p>後繼無人，只能從一群A級人才去補這個S級的缺口。結果就是，原本A級軍官作的事情，現在得要更多B級的去補，惡性循環下缺人。過去，可以透過大量高學歷義務役去補這些B、C級以下低階計畫的洞，但中高階的戰術計畫跟戰略指導，就沒辦法。</p>
 <p>現在如果能把業務分出來交給文職人員，就具有降壓的效果，讓這種S級的人減輕不必要的負擔。而分出去的業務，不是依照危險性，是根據重要度來區分，像是後備武裝的整理就可以完全交給文職。</p>
 <p>因為後備的重點比較偏備料與維護，例如步槍一萬隻，今年盤點可用只有九千，所以要送採購多少，這也沒有機密問題，少數軍官加上維修測試人員，其他的文書作業交給文職是沒問題的。</p>
