--- a/_posts/2022-02-20-VOCUS-軍事事務改革-的問題-7.html
+++ b/_posts/2022-02-20-VOCUS-軍事事務改革-的問題-7.html
@@ -11,8 +11,7 @@ author: 王立第二戰研所
 <blockquote>現在如果能把業務分出來交給文職人員，就具有降壓的效果，讓這種S級的人減輕不必要的負擔。而分出去的業務，不是依照危險性，是根據重要度來區分，像是後備武裝的整理就可以完全交給文職。<br>
 <br>
 因為後備的重點比較偏備料與維護，例如步槍一萬隻，今年盤點可用只有九千，所以要送採購多少，這也沒有機密問題，少數軍官加上維修測試人員，其他的文書作業交給文職是沒問題的。</blockquote>
-<p><br></p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/61d7d11bfd897800015a9a9d">軍事事務改革......的問題（6） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/03187864-6b64-41da-9c18-ac10ccdd66c8.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">以現狀的突破點來看，減法是行不通的，必須用加法。加法不是只有預算增加去買武器，還有其他方式，短期來說有一個方法，算有效又不影響既有利益太多的。這方式類似外包，國防部要開始大幅擴增文職人員，舉凡寫計畫跟審核都可以。不外包的話，那就是自己增加約聘人員，薪資水準比照公務員，但沒有終身聘來避免出事的換不掉。 軍事普及, 政治實務, 軍改, 軍普</figcaption>
 <p>人力不足，不是只有數量，還有品質。影響很大的因素，就是我們提高不了薪資待遇，以及社會地位，理論上來說如果你連士兵薪水都調到一個月5萬（底薪不含加給），志願役士兵申請早就爆了。</p>
 <p>不過問題有這麼單純？</p>
 <p>不行啊，你調了士兵，士官跟軍官都要調，也就是整體人事預算會指數上升。而且再怎麼給，你也不能給超過基層公務員的起薪太多，這變成軍公教等國家整體都要上調。開玩笑啊，這誰受得了，沒有國家撐得住的，更不要提軍人地位低落，同樣薪資下誰想要被看不起。（編按：編輯的老爸是公務員，他就常說民進黨仇視公務員，卻獨厚軍人。）</p>
@@ -28,7 +27,7 @@ author: 王立第二戰研所
 <p>回到主題，不管我們真的這樣認為，還是媒體希望你這樣想，或真的是全部被資訊戰攻擊的受害者，總之現狀的高階軍官，民眾懷疑其忠誠度，並非沒有所本。</p>
 <p>怎麼解決這問題？短期來說，就是先大量投入資源到政治作戰，軍方的宣教跟認知要平時培養，回歸到媒體與教育上。而且我們要能理解，這非一朝一夕可改，數十年來的習慣，將中國跟中華民國畫等號，導致他們很難切斷情感上跟中國的連結，能改到至少「清楚認知中華人民共和國就是敵人，台灣就是中華民國」上，就是很大的進步。</p>
 <p>各位知道，現役軍官中多半都把台灣跟中華民國是分開看的喔，認知上是將政治符號跟意識形態切割開的。只有年紀夠輕的，因為教育體制早就是把台灣跟中華民國畫等號，才「習慣成自然」。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/9fbb9bf9-92db-422e-a96e-7a9db5856ea5.jpg">
 <p>各位自認愛國的年輕朋友，若想要長期的改善，達成軍事事務改革，在意識形態上促成軍隊徹底的國家化，這說白了沒第二條路。</p>
 <p><strong>「從軍。」</strong></p>
 <p>也就是自稱台派的朋友，鼓勵你的小孩去唸軍校，大學生主動參加ROTC。未來十年如果整個軍方基層全部都是我們認知的台派，你還擔心什麼軍方未來會投敵？</p>
@@ -45,11 +44,11 @@ author: 王立第二戰研所
 <h3>軍改終究得透過外部民意施壓</h3>
 <p>筆者這10年看過太多什麼軍方內外，互相指責誰想當兵誰不願意，分析背後的意識形態跟生活習慣，幾乎都回歸到吃不吃苦、能否接受紀律性的人生上。</p>
 <p>坦白說啦，這幾乎無解，除非我們要在台灣的自由派上，刻劃上很激進的民族主義，才能調和這種希望軍力強大，自己卻不想碰軍事的矛盾心理。但激進的民族主義，會讓左翼的自由到進步派中，刻劃上非常深刻的裂痕，在政治上可以說是死棋。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/6eb4055a-16bb-420f-9c49-84ddb0316c09.png">
 <p>這也是回歸到筆者想做軍普的理由，因為民主國家還是看民意，民意都這樣支持，政治上就不能不作。</p>
 <p>而最後，為何筆者說，若小孩願意從軍就鼓勵，大學生自己想就去ROTC，根本上換血有用？</p>
 <p>因為，現狀是家長最大，國防部一樣怕家長去抱怨，上電視新聞就慘了。而家長壓力要去督促軍方改革軍校，絕對比我們軍宅嘴砲軍方都不改，有效一百倍。</p>
-<p><br></p>
+<p><hr></p>
 <p><strong>編按：</strong>早期的台獨主義者有一群人確實認為應該從軍，並在軍中發展組織達成其政治目的，比如說「台灣獨立聯盟案」，就有一群人全是陸軍軍官，包含施明德。但這條改革路線卻在此案後幾近斷絕。</p>
 <p>此案其中一位受難者本人曾向編輯口述，他們最喜歡講卡斯楚只靠二十個人就跑去搶兵營，然後逐漸壯大最後就革命成功，實在是見識太少的去脈絡發言。他們當初也因此曾規劃去佔領中興橋、台北橋，但幾個學生只有幾隻槍是要怎麼佔領？真的非常幼稚。</p>
 <p>但姑且不論他們當時過於年輕以至於理論多屬空泛，他也認為：「當初軍隊裡一大堆台灣人。現在『認同自己是台灣人』的幾乎都不願意當兵，別說將軍了，軍官有多少個？連尉官都沒幾個。要不是蔣介石在中國被叛變搞怕了，對軍隊的教育就是什麼都可以，只有叛變不行，不然軍隊早就叛變了。中華民國軍隊要是叛變，你要怎麼跟他鬥？你沒槍沒砲還能拿他怎麼樣？」</p>
