--- a/_posts/2022-02-23-VOCUS-中學以下的素養教育與經驗談-國二上數學篇-因式分解與一元二次方程式-上.html
+++ b/_posts/2022-02-23-VOCUS-中學以下的素養教育與經驗談-國二上數學篇-因式分解與一元二次方程式-上.html
@@ -15,8 +15,7 @@ author: 王立第二戰研所
   <li>對應教材與年齡</li>
 </ol>
 <p>沒有百分百適用，也不會有一招行天下的密技，最大差異在於針對個人或是多人數上課。而且不管多好的教材，只要學生本身完全沒有學習的意願，都是沒有用的，這時候就得要換其他方式，不能只看教材與方式。</p>
-<p><br></p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/620c1a29fd8978000164735d">中學以下的素養教育與經驗談：國二上數學篇──乘法公式與二次方根（下） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/04930171-18ae-43a0-85d4-be44ac50c827.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">其實這節，筆者只想要講二次方根，畢氏定理會比較少，因為著重在容易犯錯的地方，畢氏定理有公式，通常二次方根會懂，畢氏定理也就還好。 數學, 國中數學, 平方根, 教育文化</figcaption>
 <p>數學在二上後半，遇到了一個連貫的主題，因式分解再接一元二次方程式。對一年級有基礎的人來說，問題往往不大，但就是這個基礎兩字，通常國一爆掉的，就筆者個人經驗，學生都是放棄，父母怎樣逼都沒用，送補習班也只是聊勝於無。</p>
 <p>所以怎麼辦？建議，找安親化的補習班或家教，不要再管進度了，因為他就是已經跟不上，逼著做沒意義，基本作業完成就好，不會的就慢慢追上來。畢竟放到會考來說，A跟B的落差很難追，而不要落到C卻很簡單，想要到B+以上，可以多點優勢，都可以努力來達成。</p>
 <p>那麼，讓我們開始進入，因式分解的常見問題。</p>
@@ -36,7 +35,7 @@ author: 王立第二戰研所
 <p>(x-1)(x-2)+(-x+1)(2x-1)</p>
 <p>這會有同學不知道怎麼提公因式，畢竟因式指的是要有一樣的多項式，上式左右兩邊哪裡一樣？</p>
 <p>呃，變個號不就得了？如下：</p>
-<p><br></p>
+<img src="https://images.vocus.cc/86d96e57-63cc-474c-8ba9-9d1d765fd0b8.png">
 <p>這真的是個難關，多數卡住的就是轉不過來，因為他們習慣先看，看到很像的才去提出。筆者的建議是先提再說，以這些例子而言，問題出在不習慣動筆計算，若你強迫他先提出 (x-1)，反正另外括號內的鐵定不行，先試試看把後面 (-x-1)(2x-1) 拿去除以 (x-1)。</p>
 <p>不管他是直接除還是乘開後再除，他最後都會發現差一個負號的事實，也就是筆者的意思，不是矇著眼睛先練再說，是要透過動手計算，抓到這種稍微改變後的公因式題目。</p>
 <p><strong>多數還不差的同學，其實是透過多年累積的練習量，自然感覺到這些微小差異</strong>，所以立刻看得出差一個負號、差兩倍、差二分之一等等。如下題，這真的要透過累積計算量才會看出來：</p>
@@ -48,7 +47,7 @@ author: 王立第二戰研所
 <p>2x^2+3x+1</p>
 <blockquote>「因為 2x^2 只可能拆成 x乘以2x，所以這個2次式必定是由兩個(x+…)去乘以(2x+…)而來，然後常數項都是1，所以只可能是兩個1互乘……」</blockquote>
 <p>也就是透過拆解步驟，讓學生抓住十字交乘法的概念，而不是去記憶拆解的方法。但真的要教速解，筆者倒是覺得有一些技巧可以教，例如下式：</p>
-<p><br></p>
+<img src="https://images.vocus.cc/439b71d3-7b6d-489b-9d16-92ebbe4de357.png">
 <p>通常學生馬上就可以懂，拆出的兩個式子，2次項是 x 跟 3x，但在12上就會想很久，畢竟12要拆，又有正負號，可是有 1、12；2、6；3、4 好幾種拆法，好煩喔。</p>
 <p>其實不會，因為一次項是5x，比12來得小，所以絕對不會是1、12這組，2、6跟二次項的 x 跟 3x 湊不出來，必定是3、4這組。簡單說就是在挑選數字的時候，採用只去記 x 跟誰配，先不要管比較大的 3x。以下解說一下思維，方便師長解釋給學生聽。</p>
 <p>因為，x去乘以12分離的因數：</p>
@@ -60,7 +59,7 @@ author: 王立第二戰研所
 <p>各位可以發現，數字跟乘出的數字較小，記憶也較快，通常去記得需要乘開的數字，再去想不乘開的，會比反過來麻煩。</p>
 <p>像學生如果看到第一組x、12x，他再去看到3x怎麼配，就會想到不管怎麼乘，數字正負都湊不出5x，換2、6這組數字也一樣。只要學生四則運算沒有太慢，透過這種先抓小再看大的練習，不需要太多題目，他就可以很快抓到，這題要挑3、4這組再去配正負號。</p>
 <p>又例如：</p>
-<p><br></p>
+<img src="https://images.vocus.cc/065e123e-a636-4596-b724-4f2bf804c204.png">
 <p>正確的解法是 (x-1)(5x+6)，也就是拆 1、6，不要挑 2、3。因為中間才1，如果先挑了2跟3，會發現另一個5x乘進去後絕對不會得到1x這個數字。</p>
 <h3>數感必須練習</h3>
 <p>上面講的有點複雜，因為跟數感有點關係，這是一種訓練怎樣抓到數字大小匹配的概念，還是老話一句，<strong>必須透過練習，很難天生擁有</strong>。而筆者建議先固定小的係數，是基於人對默記數字的習慣，小的總是比大的簡單，擴大比縮小找目標快。</p>
