--- a/_posts/2022-02-28-VOCUS-軍事事務改革-的問題-8.html
+++ b/_posts/2022-02-28-VOCUS-軍事事務改革-的問題-8.html
@@ -9,20 +9,19 @@ author: 王立第二戰研所
 ---
 
 <blockquote>回歸到筆者想做軍普的理由，因為民主國家還是看民意，民意都這樣支持，政治上就不能不作。而最後，為何筆者說，若小孩願意從軍就鼓勵，大學生自己想就去ROTC，根本上換血有用？因為，現狀是家長最大，國防部一樣怕家長去抱怨，上電視新聞就慘了。而家長壓力要去督促軍方改革軍校，絕對比我們軍宅嘴砲軍方都不改，有效一百倍。</blockquote>
-<p><br></p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/61d7d376fd897800015aa834">軍事事務改革......的問題（7） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/6eb4055a-16bb-420f-9c49-84ddb0316c09.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">各位自認愛國的年輕朋友，若想要長期的改善，達成軍事事務改革，在意識形態上促成軍隊徹底的國家化，這說白了沒第二條路。「從軍。」 軍改, 軍普, 軍事普及, 政治實務, 軍事改革</figcaption>
 <p>幾周下來，有朋友會疑問，軍事事務改革怎麼講到這些，都沒有政策性或是比較快速有效的辦法？</p>
 <p>呃，一種狀況是早就做了，只是沒效。另一種是，越快速有效的，副作用往往大到做不下去，就有一好沒二好。</p>
 <p>自己熟的議題很會算成本，軍事事務不熟就覺得成本、風險其他人去擔，麻煩做人請不要這麼機車。</p>
 <p>軍事事務是很複雜的，就像是超大型的企業，各部門之間互相對立，但遇到共同利益就會合作。而偏偏要透過購買武器之類的，動不到核心問題，所以不從根本性去解決人的狀況，我們怎麼講都是沒有用的。</p>
 <p>不管怎麼說，民意壓力在民主國家是必要的，筆者也知道很多人急迫，但現實關心軍事議題的就是小眾。不然哪個立委，或是縣市議員會大聲說：「爭取軍方靶場在本區設立，爭取開放民眾在審核下參與射擊訓練……」，這種政見我們見過嗎？</p>
-<p><br></p>
+<img src="https://images.vocus.cc/6b6c43f1-4350-4a0f-af6f-cd495280b890.jpg">
 <p>根本就沒有嘛。</p>
 <p>別說有人靠這種訴求當選了，連筆者認識的人都不敢提，軍事議題我們敢說這樣很有人氣？</p>
 <h3>鍵盤專家好發高論，忘了民眾只是軍事常識幼幼班</h3>
 <p>這就是殘酷的事實，台灣人普遍不在意，所以提這些政策不會當選，那誰敢提？所以做軍普推廣，先求有再求好，意義就在此。當大家都會在意，不是只看名嘴在那吹解放軍的飛機，民眾的意識起來，後面才有得談。</p>
 <p>但這簡單嗎？非常困難，因為光是我們對軍事有點了解的人，彼此都會看不順眼了。筆者年初出了本「<a href="https://www.books.com.tw/products/0010911397?loc=P_0005_006&fbclid=IwAR0jApXcg3DMIRS2_ZlykUJ4xKeXkB6XlrXY5q2N-dgUe-KQIgeli0tquMQ">阿共打過來怎麼辦</a>」，就有軍事常識的人來留言說，裡頭大多是廢話、屁話，讓專業的人來看可能就是笑話。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/d541da8b-f678-4b0b-bc27-06bc376bded9.png">
 <p>……是以為筆者不知道嗎？</p>
 <p>這些年覺得最好笑的就是，看筆者寫的東西，如果連內含哪些理論或是手段，都完全看不出來，那還是別評論了。筆者沒有要出去選，更沒想去學校當教授搶飯碗，普及著重的就是依照現狀的程度去比喻，即使跟現實有誤差，與理想有落差。</p>
 <p>台灣的現狀，就是軍事常識的程度才在小學低年級，連加減法都還會算錯的小一新生，在筆者20年內還有力氣的歲月中，能夠拉到高年級作四則運算，已經是祖上積德。</p>
@@ -43,7 +42,7 @@ author: 王立第二戰研所
 <p>只有在這種軍方表現優良，民間觀感變好的情況下，我們去談調整軍方待遇，才不會遇到很大的反彈，被斥為政策買票之類。</p>
 <p>筆者談這些的想法，想到的都是連動，牽一髮動全身的連動，透過一些外在的牽扯，擾動整個龐大難以撼動的體系，讓其正向循環。而這最終要形成產業，畢竟軍官退伍後，若沒有事業第二春，這條軍旅之路也會被很多人視為畏途。</p>
 <p>本斥但大的由來（來源：刃牙道，第五話，坂垣惠介，長鴻。）</p>
-<p>本斥但大的由來（來源：刃牙道，第五話，坂垣惠介，長鴻。）</p>
+<img src="https://images.vocus.cc/b137e308-5a23-4913-9cf9-48d06a789cf6.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">本斥但大的由來（來源：刃牙道，第五話，坂垣惠介，長鴻。）</figcaption>
 <p>民間靶場等促進全民國防的作法就是其中一環，若民眾支持開放，像是筆者提過的概念，開放退伍後民眾每年一定的子彈免費配額，算作教召的一部分。管理的問題，透過退輔會的單位，讓退役軍官去擔任靶場的管理人員，讓軍方覺得這是一條對國軍有益的路線。</p>
 <p>不然依照現在的狀況，每一個鼓吹開放的，都不在意軍方的管理負擔，以及警察的監管責任。好像這些都是權利，風險都是別人的。我們膝蓋想也知道，軍警必定會是靶場的監管單位，他們突然多了一堆事要做又沒利益，誰想做啊。</p>
 <p>沒有利益，人就不會行動，靶場如此，其他的改革也是如此。</p>
