--- a/_posts/2022-03-13-VOCUS-關於意識形態的雜談-1.html
+++ b/_posts/2022-03-13-VOCUS-關於意識形態的雜談-1.html
@@ -9,7 +9,7 @@ author: 王立第二戰研所
 ---
 
 <div class="draft-block draft--p left">我們在討論「意識形態」的時候，一般台灣人想到的恐怕不是左右派，會討論這些已算相當有基礎的，多數人腦中「叮」一聲的，會是「偏激」、「不講道理」，然後就大腦關機，拒絕接受你接著想談論的任何事物。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/f5abaa5f-b1de-4449-b86f-269303dada57.jpg" data-width="800" data-height="450" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">還有的人會想到「洗腦」。</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/f5abaa5f-b1de-4449-b86f-269303dada57.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">還有的人會想到「洗腦」。</figcaption></div>
 <div class="draft-block draft--p left">為何？直說就是台灣民主運動興起時，威權時代的國民黨政府，或者說所有獨裁威權類的政府都會做一樣的事情，將「理性」、「激情」轉成對立用標籤，貼在敵我身上，製造「我們很理性客觀」、「你們都激情無理」的印象。照例，別來跟深藍家庭出身的筆者吵這是假的，我們從小到大聽「黨外」的事蹟，全部都是這樣，沒有一個例外。會不知道，大概是不夠根正苗紅。</div>
 <div class="draft-block draft--p left">所以，在我們談論到什麼左右、自由還保守主義等等前，不先釐清意識形態這個標籤到底是什麼，說再多都沒有用。因為台灣真的有一大堆人，認為有絕對客觀這種事情，而絕對的客觀指的就是科學，換言之他們在說的其實是工具性的理性。</div>
 <div class="draft-block draft--p left">筆者會儘量用比喻、範例來解釋這整個系列，易於讓人上手理解。</div>
@@ -33,6 +33,6 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">所謂的科學壁壘，指的就是這種遇到高鐵停駛、飛機停開、山崩落石阻斷高速公路、大水沖倒陸橋導致省道無法通行等等的外在限制。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">到此，筆者覺得各位應該有一個簡單的概念，意識形態其實是一種，屬於我們偏好的項目。</span>極端意識形態，並不是什麼不講理還是怎樣，只是偏好強烈到「只有開車才是真理派」、「沒有高鐵寧可在家派」這種，所以遇到各種科學問題，我們會覺得不可理喻，理由其實是人家認為「高鐵停駛我就不去高雄了啊」，對他來說搭高鐵這件事情比出遊重要。</div>
 <div class="draft-block draft--p left">（用現實的比喻，就好像是寧可沒電用，抵死不燒化石燃料去發電這類人）</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/9647a4f5-1067-4bba-9c4f-fcfa9aec725c.png" data-width="1280" data-height="712" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">「我不能去高雄都是高鐵的錯！」（《為美好的世界獻上祝福》動畫截圖）</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/9647a4f5-1067-4bba-9c4f-fcfa9aec725c.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">「我不能去高雄都是高鐵的錯！」（《為美好的世界獻上祝福》動畫截圖）</figcaption></div>
 <div class="draft-block draft--p left">很詭異？對，因為把這種偏好放大到政治、社會議題，就會出現很奇怪的現象。去不去高雄，怎麼去頂多是影響到一家人，真要堅持開車到底也不過慢了點，造成損失跟對社會危害的可能風險都不大。</div>
 <div class="draft-block draft--p left">而這擴張到大型議題，為何極端意識形態常常造成災難？因為規模的擴大後，使得社會要擔負的成本、風險都拉到很高罷了。</div>
