--- a/_posts/2022-03-22-VOCUS-方格子電台-podcast-ep27-瘋屯糧與備戰傳言-分析中國真正目的.html
+++ b/_posts/2022-03-22-VOCUS-方格子電台-podcast-ep27-瘋屯糧與備戰傳言-分析中國真正目的.html
@@ -10,12 +10,10 @@ author: 王立第二戰研所
 
 <div class="draft-block draft--p left">全新集數EP.27已上線</div>
 <div class="draft-block draft--p left">每週一更新：時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://open.firstory.me/story/cl0qozoyt000f0h0nghdof11f/platforms" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/d3913dff-2645-4a64-89f8-cfdbc67bdf43.png" data-width="1360" data-height="713" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d3913dff-2645-4a64-89f8-cfdbc67bdf43.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">瘋屯糧與備戰傳言，分析中國真正目的</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">點此用喜歡的方式收聽節目▶︎▷<a href="https://open.firstory.me/story/cl0qozoyt000f0h0nghdof11f/platforms" target="_blank" class="draft--a">《方格子電台-王立第二戰研所》</a></div>
-<div class="draft-block draft--p left">Apple：https://<a href="http://reurl.cc/pWjdox" target="_blank" class="draft--a">reurl.cc/pWjdox</a><br>Spotify：https://<a href="http://reurl.cc/oeoLpv" target="_blank" class="draft--a">reurl.cc/oeoLpv</a><br>KKBOX：https://<a href="http://reurl.cc/Npmjne" target="_blank" class="draft--a">reurl.cc/Npmjn</a><br>Google：https://<a href="http://reurl.cc/EpM7Wk" target="_blank" class="draft--a">reurl.cc/EpM7Wk</a><br>更多收聽平台：<a href="https://reurl.cc/3jlDm0" target="_blank" class="draft--a">https://reurl.cc/3jlDm0</a></div>
+<div class="draft-block draft--p left">Apple：<a href="http://reurl.cc/pWjdox" target="_blank" class="draft--a">https://reurl.cc/pWjdox</a><br>Spotify：<a href="http://reurl.cc/oeoLpv" target="_blank" class="draft--a">https://reurl.cc/oeoLpv</a><br>KKBOX：<a href="http://reurl.cc/Npmjne" target="_blank" class="draft--a">https://reurl.cc/Npmjn</a><br>Google：<a href="http://reurl.cc/EpM7Wk" target="_blank" class="draft--a">https://reurl.cc/EpM7Wk</a><br>更多收聽平台：<a href="https://reurl.cc/3jlDm0" target="_blank" class="draft--a">https://reurl.cc/3jlDm0</a></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 ZmUQI draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 bHwnUx draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dTIYWL"></pre></div>
 <blockquote class="draft-block draft--blockquote">本集更新<br>EP27 ：瘋屯糧與備戰傳言，分析中國真正目的</blockquote>
 <div class="draft-block draft--p left">新番內容：</div>
@@ -24,4 +22,3 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">因為現代戰爭不是只看一個東西，不是只有糧食，還有彈藥跟一些部署，訓練也要算在內，光是靠屯糧作為是否要打仗的指標，我倒希望中國的解放軍蠢到只用這個指標，對我們來講是大大的好。</div>
 <div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">想看更多軍事常識？歡迎追蹤<a href="https://vocus.cc/eoiss/introduce" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft-block draft--p left"></div>
