--- a/_posts/2022-04-03-VOCUS-writing吃喝-告白必勝飲料-冰果甜心.html
+++ b/_posts/2022-04-03-VOCUS-writing吃喝-告白必勝飲料-冰果甜心.html
@@ -8,26 +8,25 @@ tags: blog
 author: Writing 生活玩家
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1796px" class="image-block-prerender" data-src="https://images.vocus.cc/cf4e284b-06e4-41be-80fd-14beec32c0bb.jpg" data-width="1796" data-height="808" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/cf4e284b-06e4-41be-80fd-14beec32c0bb.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">今天要來介紹一款飲品，因為飲品直接給你一顆大大的愛心，造型非常吸睛，而且飲料非常好喝，所以拿出來推薦一下👍</div>
 <div class="draft-block draft--p left">「潮茶理」標榜台茶、蔗糖、鮮果三位一體，調出美味的極品好茶，這次我先品嚐了「熟香蘋果紅茶」，採用濃郁的阿薩姆紅茶為基底，加上炙燒過的蘋果片以及青森蘋果汁，放置一小段時間再品嚐，可以喝得到更濃的蘋果香，非常的好喝。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/1e265cb7-a5fd-4b8a-b98e-2c433405837f.jpg" data-width="1280" data-height="1280" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/1e265cb7-a5fd-4b8a-b98e-2c433405837f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">他們還有青蘋四季春，喝起來比較清爽，推薦大家第一次可以先品嚐蘋果紅茶，來店必點單品！</div>
 <div class="draft-block draft--p left">另一杯是「冰果甜心」，最底層以小碎冰當基底，加上店家特製熬煮的黃色鳳梨果醬，加入整杯的手工原味愛玉，然後放上代表告白的甜菜愛玉，整體搭配滿分，喝起來有鳳梨冰茶的口感，在小碎冰的襯托下清爽可口，不管是造型還是口味，都是值得品嚐的一款茶飲喔😋</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1440px" class="image-block-prerender" data-src="https://images.vocus.cc/a16af410-a547-4e5e-98bb-5d7e0dc43853.jpg" data-width="1440" data-height="1440" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/a16af410-a547-4e5e-98bb-5d7e0dc43853.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">另外介紹他們的冷泡茶 - 福鹿紅烏龍，裡面採用紅茶茶葉和烏龍茶葉搭配調製的冷泡茶，喝起來口感有花果香，非常清新回甘，超級好喝，喜歡純茶的人可以直接點冷泡喝看看，一定會滿意！</div>
 <div class="draft-block draft--p left">（看我的IG有影片介紹喔😊）</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1907px" class="image-block-prerender" data-src="https://images.vocus.cc/f87813c6-3b56-4e43-9446-181d0d11c8de.jpg" data-width="1907" data-height="858" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/f87813c6-3b56-4e43-9446-181d0d11c8de.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">今天點的單品：</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">熟香蘋果紅茶（炙燒蘋果果片） $50</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">冰果甜心（手工愛玉、洛神花、鳳梨） $60</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">福鹿紅烏龍（冷泡） $45 /瓶</span></div>
 <div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:858px" class="image-block-prerender" data-src="https://images.vocus.cc/17d00c3d-6e3e-473e-8cb2-1dabd3fa9599.jpg" data-width="858" data-height="1907" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/17d00c3d-6e3e-473e-8cb2-1dabd3fa9599.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">他們目前只有一間店，可以親自去品嚐看看喔～</div>
 <div class="draft-block draft--p left">附上菜單給大家參考：</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:834px" class="image-block-prerender" data-src="https://images.vocus.cc/8bb7b9d0-a69e-48f9-b53d-63c0acda303e.jpg" data-width="834" data-height="1094" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/8bb7b9d0-a69e-48f9-b53d-63c0acda303e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">【潮茶理】</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">🏠店址：台中市北區漢口路四段369-2號</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">☎️電話：<a href="tel:04-22368860">04-22368860</a></span></div>
@@ -39,6 +38,5 @@ author: Writing 生活玩家
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">另外我已經開設YouTube頻道，會陸續放上影片，未來也會利用YouTube平台介紹更多吃喝玩樂有趣的事物喔～</span></div>
 <div class="draft-block draft--p left"><a href="https://youtube.com/channel/UCRMwJwQHmQYEn8R8FlWiXfA" target="_blank" class="draft--a">Writing生活玩家頻道</a></div>
 <div class="draft-block draft--p left">歡迎大家鑑賞😆 <span style="font-weight: bold; ">記得幫我按讚加追蹤～謝謝各位的支持～</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:770px" class="image-block-prerender" data-src="https://images.vocus.cc/8e2825b4-548b-47c1-81ce-04192b7ae39d.jpg" data-width="770" data-height="623" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:538px" class="image-block-prerender" data-src="https://images.vocus.cc/7bd88199-bdd6-48f8-a130-fb847c00176e.jpg" data-width="538" data-height="498" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/8e2825b4-548b-47c1-81ce-04192b7ae39d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/7bd88199-bdd6-48f8-a130-fb847c00176e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
