--- a/_posts/2022-04-03-VOCUS-writing吃喝-微甜的少女系口感-蜜桃甘露-桃氣芝芝.html
+++ b/_posts/2022-04-03-VOCUS-writing吃喝-微甜的少女系口感-蜜桃甘露-桃氣芝芝.html
@@ -8,28 +8,25 @@ tags: blog
 author: Writing 生活玩家
 ---
 
-<div class="draft-block draft--p left"><br></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/2a2e55ad-095f-432c-84c2-2818885ac544.jpg" data-width="1280" data-height="1280" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/2a2e55ad-095f-432c-84c2-2818885ac544.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Mr.Wish推出新品啦！</span></div>
 <div class="draft-block draft--p left">這次的「蜜桃系列」充滿了春天的少女心，今天從南投回家途中，看到Mr.Wish推出蜜桃系列新品項，相較常常看到的草莓、葡萄系列，這次決定來喝一點不同的口味，順著新品項，點了兩杯來試試口感。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:858px" class="image-block-prerender" data-src="https://images.vocus.cc/b141ae30-299e-4f73-bce9-aab6090d697f.jpg" data-width="858" data-height="1907" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b141ae30-299e-4f73-bce9-aab6090d697f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">「蜜桃甘露」</span></div>
 <div class="draft-block draft--p left">這杯口感層次分明，裡面有水蜜桃果肉，加上一層水蜜桃冰沙，由軟Q有嚼感的「ㄉㄨㄞ ㄉㄨㄞ 方Q」打底，最後淋上統一AB優酪乳，非常的好喝，稍微攪拌讓優酪乳混合水蜜桃果肉和冰沙，酸甜酸甜的滋味，彷彿遇到一個心儀對象般，久久無法忘懷，「ㄉㄨㄞ ㄉㄨㄞ 方Q」可以讓妳在口中滿滿品嚐，嚼感極佳，真的一喝就停不下來了😋</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:858px" class="image-block-prerender" data-src="https://images.vocus.cc/df44d22d-17d9-455e-ba97-8f1c3bb1c679.jpg" data-width="858" data-height="1907" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/df44d22d-17d9-455e-ba97-8f1c3bb1c679.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">另一杯<span style="font-weight: bold; ">「桃氣芝芝」</span>，主體為水蜜桃冰沙，搭配蜜桃丁，整杯滿滿的蜜桃滋味，最特別的是它最上層覆蓋的芝士奶蓋，開蓋直接喝的話，可以喝到鹹甜的味覺饗宴，搭配水蜜桃果粒和冰沙，有著漸層式的口感。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:989px" class="image-block-prerender" data-src="https://images.vocus.cc/cd84f9a3-74e8-4d9f-a6aa-4e0f4d43aba8.jpg" data-width="989" data-height="1656" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/cd84f9a3-74e8-4d9f-a6aa-4e0f4d43aba8.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">其實喝上一杯這類飲品，真的會影響心情，一杯帶著酸酸甜甜的滋味有著初戀感，另一杯散發出鹹甜鹹甜的美味，讓妳可以在生活上忘卻不愉快，兩杯喝起來都不會死甜，真的好喝喔😊</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:858px" class="image-block-prerender" data-src="https://images.vocus.cc/e9b72adb-8631-4e7d-87b0-ff88da59f82a.jpg" data-width="858" data-height="1907" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/e9b72adb-8631-4e7d-87b0-ff88da59f82a.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">【飲品售價】</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">🍑蜜桃甘露 $110</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">🍑桃氣芝芝 $90</span></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">‼️這次連假 4/1 ～4/5</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">蜜桃甘露特惠嚐鮮價 $95</span></div>
 <div class="draft-block draft--p left">喜愛蜜桃的朋友可以來嚐鮮喔😊</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1748px" class="image-block-prerender" data-src="https://images.vocus.cc/cae18c5a-4426-4618-9e45-a1f4a3483ccf.jpg" data-width="1748" data-height="936" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:895px" class="image-block-prerender" data-src="https://images.vocus.cc/9b398042-7a03-4284-8487-0c01ddd5d334.jpg" data-width="895" data-height="1828" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/cae18c5a-4426-4618-9e45-a1f4a3483ccf.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/9b398042-7a03-4284-8487-0c01ddd5d334.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">—————————</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">【Me.Wish草屯中正店】</span>（全台Mr.Wish門市均有販售）</div>
 <div class="draft-block draft--p left">🏠地址：南投縣草屯鎮中正路640號</div>
@@ -42,5 +39,5 @@ author: Writing 生活玩家
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">另外我已經開設YouTube頻道，會陸續放上影片，未來也會利用YouTube平台介紹更多吃喝玩樂有趣的事物喔～</span></div>
 <div class="draft-block draft--p left"><a href="https://youtube.com/channel/UCRMwJwQHmQYEn8R8FlWiXfA" target="_blank" class="draft--a">Writing生活玩家頻道</a></div>
 <div class="draft-block draft--p left">歡迎大家鑑賞😆 <span style="font-weight: bold; ">記得幫我按讚加追蹤～謝謝各位的支持～</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:759px" class="image-block-prerender" data-src="https://images.vocus.cc/6e80a1e0-1b77-47ad-be74-e5394db88360.jpg" data-width="759" data-height="709" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:646px" class="image-block-prerender" data-src="https://images.vocus.cc/596087b9-980b-43a1-b165-14ae358a8714.jpg" data-width="646" data-height="642" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/6e80a1e0-1b77-47ad-be74-e5394db88360.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/596087b9-980b-43a1-b165-14ae358a8714.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
