--- a/_posts/2022-01-18-VOCUS-戰略學進階-陣形-8-從線列到散兵.html
+++ b/_posts/2022-01-18-VOCUS-戰略學進階-陣形-8-從線列到散兵.html
@@ -9,7 +9,7 @@ author: 王立第二戰研所
 ---
 
 <blockquote>火槍時代的戰爭，在戰場上的陣形轉換已經沒那麼神奇了，什麼鶴翼轉魚鱗、魚鱗化車懸，基本上都是寫小說，不可能出現。怎樣透過軍力、火力的配重，前線軍官高明的戰術運作讓敵軍損失過大，使得敵軍的陣形被迫拉長變薄，出現破洞讓我軍可以切斷、突穿，幾乎都是公式行為。說是公式，但怎樣在戰場上找到那個薄弱點，下令送入部隊進行關鍵一擊，就很仰賴將領的指揮能力。</blockquote>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/61dc422cfd897800010df132">戰略學進階──陣形（7）：橫陣的基礎 | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/b7b5e747-c5c8-4d9f-affc-1f8590f8746a.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">在熱兵器時代開始進入戰場後，密集方陣就開始退出有火器的會戰了，筆者還是再強調一次，這不是瞬間改變，而是根據火器的數量與技術提高，漸進的過程。隨著時代演進，戰場上的野戰砲與火槍越來越多，密集陣形就越來越沒意義，此時的火槍兵陣形，縱陣常用於行軍前進，冷兵器陣形的章節解釋過轉換成橫陣的便利性。 戰略教學, 戰略, 火槍, 戰場, 工業國家, 軍官養成, 後勤, 陣形</figcaption>
 <p>線列步兵的出現，主要是集中火力，然後在敵軍陣形上打出一個洞。到此為此的思維，跟傳統冷兵器的陣形沒有太大的差異，但隨著技術進步，轉變越來越快。</p>
 <h3>兵器技術讓陣形必須變化</h3>
 <p>第一個大變化，就是野戰砲的提升，砲身輕量化，砲彈種類多元化，尤其是據點攻防用的榴彈，大規模殺傷使用的霰彈（砲彈有非常多種，以下就只稱榴彈跟散彈，避免太過細節的爭議）。</p>
