--- a/_posts/2022-01-24-VOCUS-軍事事務改革-的問題-3.html
+++ b/_posts/2022-01-24-VOCUS-軍事事務改革-的問題-3.html
@@ -9,8 +9,7 @@ author: 王立第二戰研所
 ---
 
 <blockquote>講這麼多，筆者只是想讓一般人了解一個很重要的概念，軍官都是人，就跟你上班的主管一樣。你也曉得副總技術出身，向來輕視業務，所以業務經理頭就很大，反過來老闆業務出身，總是跟客戶承諾做不到的事，現場生產人員跳腳。但你說誰是對的？</blockquote>
-<p><br></p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/61d7c4fcfd897800015a5548">軍事事務改革......的問題（2） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/b667267c-d704-422a-b26a-c426cc62ec55.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">軍隊就是一家超大型企業，裡面有各種部門運作，從產品開發到代理，製造生產到出貨，顧客服務跟產品保固，什麼都有。這也是廢話，現代企業的雛型，管理技術跟發展，都是戰爭催生、軍隊使用後出現的。 軍事改革, 軍普, 軍事普及, 戰略教學</figcaption>
 <p>上週說到，我們要認清自己希望的，其實不見得能作到，有可能是尺度問題，在某一個尺度上合理的，放大到全局就可能說不通。更有可能是，單一方面合理，但每一個合理全部湊在一起，就是胡說了。</p>
 <p>軍事事務改革，台灣很多人都在講，問題是你想要改什麼？第一個要釐清的就是，我們認知的問題本質是什麼，這道理就跟你拿跨國企業的雀巢，去痛罵亞馬遜的組織弊病，正常人應該都會歪頭，不解為何這樣類比。（更多的是拿養雞去罵養豬，說不是都畜牧有差嗎？）</p>
 <p>所以，筆者要提幾個我們常見的問題，或者說是這幾十年見過很多的，來大致解釋一下。這樣讀者就會有概念，為何認知不同，會造成提出的解決方案互卡。</p>
@@ -20,7 +19,7 @@ author: 王立第二戰研所
 <p>為何幾近不可能？</p>
 <p>這個認知問題的本質，就是這類人認為現今軍事體系受限黃埔體系的訓練，習慣改不了，體系內的學長弟制度也無解，不少人還會連結到中國人的思維等等。所以，照此思考，整個砍掉重練，這想法也不是不合理。</p>
 <p>對，筆者承認，這種砍掉重練的思路是對的。問題是，一家公司要砍掉重練，你需要什麼？錢、錢、錢跟很多的錢，以及時間跟更多時間。</p>
-<p>（米國）爸爸我不想努力了</p>
+<img src="https://images.vocus.cc/665321aa-a5f6-41d9-8127-8a42b88fb947.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">（米國）爸爸我不想努力了</figcaption>
 <p>尤其是砍掉黃埔、美軍代訓的作法，實際上就是台灣放棄一切國防自主性，主權移交給美國。如果現在是1949年，或許筆者會認為把老蔣推翻掉再這樣作具有可行性，但現在的國軍可以嗎？</p>
 <p>很難，因為美國已經走到認同台灣是一個獨立國家的現狀，美軍全面接管就是不可能的，最多作到派遣教官、顧問，常常聯合演訓、代訓部分的部隊，也就是簽約制。</p>
 <p>筆者還是要強調，許多認為<a href="https://zh.wikipedia.org/zh-tw/%E5%8F%B0%E7%81%A3%E5%9C%B0%E4%BD%8D%E6%9C%AA%E5%AE%9A%E8%AB%96">主權未定論</a>的朋友，堅持美國可以來接管，但你也看看民主共和兩黨的樣子，哪裡像是願意派軍隊來接管的態度。</p>
@@ -30,7 +29,7 @@ author: 王立第二戰研所
 <h3>台海是戰爭熱區，沒有大幅度改革的時間餘裕</h3>
 <p>如果不是直接承接，而是拆掉既有架構，例如所有現役軍官都打包回家，那麼面臨到的問題，就是有兵無將，上段才講過這個規模多大，等於要美國瞬間生3個師的軍士官派到台灣。</p>
 <p>就先不管做不做得到啦，當完全可以好了。這第一個副作用是，成千上萬失業軍官，你要怎樣顧好他們的退路？你敢保證這些人不會跑去當第五縱隊？</p>
-<p>中華民國國軍退休將官預演給你看（才怪），<a href="https://i.imgur.com/V49bRj1.jpg">來源</a></p>
+<img src="https://images.vocus.cc/d77782e5-0470-4d87-b7c1-117994ec1fb8.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">中華民國國軍退休將官預演給你看（才怪），<a href="https://i.imgur.com/V49bRj1.jpg">來源</a></figcaption>
 <p>若是先在台灣進行忠誠考核，覺得太過親中有通敵嫌疑的都去掉，只留下合格愛國的，這樣總行吧？</p>
 <p>可以，這理論筆者接受，問題是你的標準怎麼訂立？指標在哪？審核形式？誰來審核？</p>
 <p>不要以為筆者在那邊講廢話，個人是見過把審核標準訂到夭壽高，最後我們大概只會得到，唯有設定標準的那幾個人才符合標準的結果，因人設事可以當真？說白了啦，就是設定標準的人，把自己訂為愛國，其他都是不愛國。（賣鬧啊）（編：臺文正字「<a href="https://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=7838&curpage=1&sample=%E8%8E%AB&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=8">莫</a>鬧<a href="https://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=3350&curpage=1&sample=%E7%9F%A3&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=2">矣</a>」）</p>
@@ -49,5 +48,5 @@ author: 王立第二戰研所
 <p>這說到底就是，就算美國有意願接管台灣軍隊，台灣在時間的現狀上也並不容許這段轉換期。而實際上你要美國連帶承接台灣防務，防衛中國在轉換期的進犯，這已經超過台美重新建交跟簽署共同防禦協定的程度，現階段看不出美國政治面上能夠接受此類方案。</p>
 <p>最多就是，接受台灣出錢，美國代訓或是聘僱教官的方式，協助台灣軍官的程度提升。</p>
 <p>所以這並不是黃埔很爛該全換的本質，是本質就算真的這麼爛，你也沒有什麼執行手段，可以做到「全部換掉」的匹配。就算部分換掉，達成條件也很嚴苛，提出「換掉~~換掉~~通通換掉~~~」的（老師請下音樂），堅持完全可行的，</p>
-<p><br></p>
+<iframe class="embedly-embed" src="https://www.youtube.com/embed/bqWfosgn_QI" scrolling="no" allow="autoplay; fullscreen" allowfullscreen="true" width="740" height="417" frameborder="0"></iframe>
 <p>能不能請您自己先寫份草案給大家看看？</p>
