--- a/_posts/2022-01-24-VOCUS-軍事事務改革...-的問題-2.html
+++ b/_posts/2022-01-24-VOCUS-軍事事務改革...-的問題-2.html
@@ -9,11 +9,11 @@ author: 王立第二戰研所
 ---
 
 <blockquote>筆者是認真的，這不是反諷。所以軍事事務改革為何講這麼多，都不提個具體方案出來？因為你在民主國家想要推行改革，要說服的對象就是這種「大部分都不知道，知道無人機就很棒」的民情。覺得可以靠洗媒體洗到民眾支持特定武器的購買，跟推動整個國家從都不想碰軍事改革到願意聽，完全不是同一等級。</blockquote>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/61d7c4b5fd897800015a540d">軍事事務改革......的問題（1） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/b23b9d71-a909-43fd-868f-21666b5be923.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">這個系列來談軍事事務改革，個人其實並...沒有很想講，因為複雜的事物要討論出具體方向，最常出現的問題是：「你在工三小（講啥潲）」。當討論A的改革方案，就跟B產生牴觸，若採取ABCDE全盤都顧好的方法，結果大家都不滿意。這導致不少人最後一頭栽到某一項目，不從這開始改一切休提。每個人都說自己是關鍵，這... 軍事改革, 軍普, 空地一體, 軍事普及, 戰略教學, 政治實務, 武器, 軍事, 專家, 問題, 無人機, 戰力, 討論, 戰爭, 生產, 坦克</figcaption>
 <p>承上週，筆者講到，改革方案的提出確實需要專家，但在民主國家中要推動，我們要針對大多數人，畢竟民主國家靠選票，選民如果對改善義務役掃水溝拔草的政見興致不大，對買坦克飛機大砲的反應熱烈，就不要怪政客最後做出讓你翻桌的決定。</p>
 <p>誘因決定方向，若我們老以為民眾都是愚蠢的，就當成愚民去欺騙誘導，反對溝通，更有甚者以為民眾就該乖乖聽「我們專家的」，那就不要抱怨到處都民粹。</p>
 <p>因為，真的，一般選民就是會對表面工夫大加讚揚──買飛機好棒喔，但是欠飛官怎麼辦？飛官補足了，退伍金跟退伍後的第二人生怎麼辦？退役飛官去管制後投敵的問題怎麼處理？投敵的回來做第五縱隊拉攏又該如何反制？都不知道啦，反正飛機買了就好棒。</p>
-<p>截圖自《天元突破 紅蓮螺巖》</p>
+<img src="https://images.vocus.cc/dbf5b17d-4390-42c3-aee6-d6c09a9c1b07.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">截圖自《天元突破 紅蓮螺巖》</figcaption>
 <h3>選民看表面立委沒概念，是要怎麼改？</h3>
 <p>你以為筆者是在酸？不是，這是現實，就個人有認識的政治人物來說，即便他軍事知識很強，也不敢公開跟選民對嗆，溝通很花時間的，尤其是講解這種一般人不熟的東西。更不要說，國防是中央事務，等到一個有軍事專業的議員爬到立委，都幾歲了。</p>
 <p>我們看到的各種軍事立委無能、無知、無恥，是台灣過去數十年的整體結果，不是原因。</p>
@@ -24,7 +24,7 @@ author: 王立第二戰研所
 <p>唉，就別唉了，我們來談談，軍事事務的改革，到底應該怎麼做。</p>
 <h3>軍隊是一種企業，它的客人是「想像的戰場」</h3>
 <p>首先，筆者希望各位讀者，可以在看待軍事的「事務」時，用正常眼光去看，不要動輒想像某種軍工複合體，有幾個陰謀家在那邊「嘿嘿嘿」的討論怎樣分贓利益，當死亡商人超爽。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/bd7c8015-4f73-4c34-9f9b-e9ac40bf3c2b.png">
 <p>軍隊就是一家超大型企業，裡面有各種部門運作，從產品開發到代理，製造生產到出貨，顧客服務跟產品保固，什麼都有。這也是廢話，現代企業的雛型，管理技術跟發展，都是戰爭催生、軍隊使用後出現的。</p>
 <p>但這也不是廢話，多數人並不理解，因為軍隊的原物料到產品，跟一般公司行號不同。正因為指標不同，導致我們很難理解，所以乾脆不去理解，甚至當成一種特別奇怪的存在。忘記的人請回想<a href="https://vocus.cc/article/61d7c4b5fd897800015a540d?fbclid=IwAR2cuWB_g5P1StIpDATHw8kdpTajWfemE3O6Evm8JV8RluhMGn22lqm3iCQ">第一篇</a>，軍事武器的研發到量產都要很多年，這類似從生產到顧客驗收，你小孩都大了，我們一般企業根本不可能做這種規劃。</p>
 <p>大致上，軍隊的運作類比企業，要反過來去看。軍隊的顧客就是戰場，是一個虛擬人格，在沒有戰爭的國家，戰場都是一種劇本（Scenario）、假設出的情境，所以顧客反應、產品除錯，很難具體的被解釋。各位可以想成，在台灣這種沒有戰場的國家，產品到顧客使用，也都是虛擬的狀況，這導致一般人更難判斷。</p>
@@ -39,7 +39,7 @@ author: 王立第二戰研所
 <p>所以，軍事事務改革的第一步，就是認識組織的複雜，承認「自己在意的，在整體上也許沒那麼值得在意」。</p>
 <p>用白話文解釋，步兵軍官覺得增加戰鬥、戰術訓練，每天練槍跟城鎮戰模擬，不然打仗會輸。裝甲兵認為坦克火炮要強、裝甲要厚、機動性要高、夜戰能力加強，不然怎麼對抗中國新銳坦克，很容易被步兵抄掉。</p>
 <p>但就防區司令的看法，他可能會認為，我們需要的是裝步砲的聯合演訓，所以要多練習協同作戰，裝甲跟步兵兩個單位要好好配合……</p>
-<p>然後基層部隊的心理都這樣</p>
+<img src="https://images.vocus.cc/b667267c-d704-422a-b26a-c426cc62ec55.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">然後基層部隊的心理都這樣</figcaption>
 <p>可是兩個單位的時間都是有限的啊，你總不能一天48小時，還要士兵不休息。那麼當你推了這種要兩邊協作的計畫，會發生什麼事？這事情，就類似兩個不同的生產部門，要合作一款可以匹配的新產品，問題會多大？</p>
 <h3>「適於戰爭」的軍隊標準到底如何制訂</h3>
 <p>這不是沒工作過的中學生在那邊想，不就兩個部門開開會討論就好？</p>
