--- a/_posts/2022-01-31-VOCUS-軍事事務改革-的問題-4.html
+++ b/_posts/2022-01-31-VOCUS-軍事事務改革-的問題-4.html
@@ -9,15 +9,14 @@ author: 王立第二戰研所
 ---
 
 <blockquote>一家公司要砍掉重練，你需要什麼？錢、錢、錢跟很多的錢，以及時間跟更多時間。</blockquote>
-<p><br></p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/61d7c7f1fd897800015a6131">軍事事務改革......的問題（3） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/665321aa-a5f6-41d9-8127-8a42b88fb947.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">砍掉重練說來簡單，可是問題從來就不是概念，是具體來說該怎麼做。全部砍掉不行，部分砍掉勉強可以，那還有哪些是可以透過美國介入作到的？真要講，最多就是，所有想要升少校以上的軍官，以往的正規班改為赴美受訓，沒有結訓就沒有升官資格。 軍事改革, 軍普, 軍事普及, 第五縱隊, 美國代管</figcaption>
 <p>上次筆者提到，極端的軍事事務改革，讓美國接手其實作不到，歷史上也找不到什麼案例，那麼有沒有另外的一種方式？本土進行部分但有效率的改革，去把黃埔體系「洗乾淨」？</p>
 <p>可以，實際上就有在作，就是<a href="https://life.sao.stu.edu.tw/%E5%9C%8B%E8%BB%8D%E6%8B%9B%E5%8B%9F%EF%BC%88rotc%EF%BC%89/rotc%E5%A4%A7%E5%AD%B8%E5%84%B2%E5%82%99%E8%BB%8D%E5%AE%98%E8%A8%93%E7%B7%B4%E5%9C%98/rotc%E5%A4%A7%E5%AD%B8%E5%84%B2%E5%82%99%E8%BB%8D%E5%AE%98%E8%A8%93%E7%B7%B4%E5%9C%98qa/">ROTC</a>（編按：大學儲備軍官，大學生可申請，由政府提供學雜費補助，畢業後需服五年役，掛少尉銜。可以理解成拿政府錢讀大學的志願役軍官）。不過我們也知道，截至目前為止也沒多大效用，ROTC跟正期生相比，在晉升上的劣勢連提都不用提。</p>
 <p>另一種洗的方式，就是成立新的軍校，用二元、多元體系的方式，逐漸洗掉我們所稱的黃埔系統。這陳水扁年代就想過了，只不過連弄個新戰研去對抗淡江都不行，因為大多數台灣人根本就不想碰這些軍事理論，自然想在理論面上找到可以對抗的方法都不行。</p>
 <h3>不砍掉既有組織，另建新體系對抗可行嗎？</h3>
 <p>你說，這跟成立軍校有何關係？關係可大了，軍校隸屬國防部還是教育部？國防部，不是教育部喔，這代表軍事教育全是軍隊體系。在此狀況下，你成立新的軍校，也一定是掛在軍方名義下，最後不會變成黃埔第二軍校才怪。</p>
 <p>也就是說，陳水扁早就知道，你不先培養足夠軍事專業的教授、教師、教官，開第二間軍校根本沒意義。如果要請外國籍的，也得要面臨薪資條件等等限制，好比你要請一個波灣戰爭後中校退，去修了博士學位後教書，實戰跟教育經歷兼備的教授，要花多少錢？</p>
-<p><br></p>
+<img src="https://images.vocus.cc/41923132-11af-41e9-823e-3c47bed62dc3.jpg">
 <p>要挖人家來台灣，薪資福利不夠高根本不可能，而且不能只挖一個，不然新軍校哪來夠多的老師。這變成，你還不如去弄個新戰研所，訓練一批思想模式夠強的，去教新一代的教官回軍校去教書，整體的效益比較平衡。不然我們就只能讓人事費夭壽高，去排擠其他預算了。</p>
 <p>所以，我們若要成立新軍校，第一個要考量的是，師資跟教學內容，其次才是這些人服役後，會不會遇到舊軍校的抵抗。要消弭舊體制的抵抗，光用說的沒有用，必須實際上去作一些改變，後面再提。</p>
 <p>讓焦點先集中在「改革學校的困難」，如果我們不從教範，也就是課綱、課本去改，那麼軍校的改革是無望的。對一個受了軍校訓練出去的少尉，說你學的都沒屁用，一切都是假的，這反彈恐怕更大。現狀是負負得正，因為軍隊的實務更糟，才會出現一群少年軍官希望改革的聲浪。</p>
@@ -32,7 +31,7 @@ author: 王立第二戰研所
 <p>重點是在於，我們的晉升機制，能否符合這種需求。需求指的是，透過新軍校、交換學生等的方式，得到更具備現代化作戰思維的軍人，並讓這些新軍官能夠在體制中逐漸影響他人，最終爬到可以主導體系的高位？</p>
 <p>坦白說，這種想法很不現實，因為晉升機制會出現，就是根據某種指標，若我們要改變這個指標，等於是整個軍隊的做法都要變。換言之，是另一個雞生蛋蛋生雞問題，軍隊現狀產生的指標，對於我們想要的優秀軍官來講是沒意義的，而這個指標是透過現在爬到高階將領的人去指導的。</p>
 <p>要改變，最直接的做法，就是政治面，由執政黨下手，去撤換主要高階將領。更有甚者，學對岸的維尼，連中階軍官都要全部換掉，換親自己的人上去。</p>
-<p>習近平：連國際組織都換成我的人（計画通），<a href="https://news.ltn.com.tw/news/politics/paper/1417458">來源</a></p>
+<img src="https://images.vocus.cc/e7016a95-af0c-44eb-8f71-9a12ea7d90f7.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">習近平：連國際組織都換成我的人（計画通），<a href="https://news.ltn.com.tw/news/politics/paper/1417458">來源</a></figcaption>
 <p>若做不到此點，想要透過自然汰換的方式，那就等於是要干預整個體系；體系是不可能藉由單純加入幾個新血就可以洗淨的，能夠保持不被汙染就不錯了。洗體系的方法就兩種，一種是夠多的人下去，另一種是人事制度依照現狀不變，但政治力介入去替換。</p>
 <p>這兩種做法，在現狀都有問題。</p>
 <p>透過夠多的人洗，就是前面說的建立新軍校，或是交流夠多軍官，不管哪一種需要的都是錢。但錢反倒在其次，我們怎樣吸納夠多符合需求的教育人員投入，這會比蓋學校還要難。</p>
