--- a/_posts/2022-03-01-VOCUS-中學以下的素養教育與經驗談-國二上數學篇-因式分解與一元二次方程式-下.html
+++ b/_posts/2022-03-01-VOCUS-中學以下的素養教育與經驗談-國二上數學篇-因式分解與一元二次方程式-下.html
@@ -15,8 +15,7 @@ author: 王立第二戰研所
   <li>對應教材與年齡</li>
 </ol>
 <p>沒有百分百適用，也不會有一招行天下的密技，最大差異在於針對個人或是多人數上課。而且不管多好的教材，只要學生本身完全沒有學習的意願，都是沒有用的，這時候就得要換其他方式，不能只看教材與方式。</p>
-<p><br></p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/621269b6fd89780001676097">中學以下的素養教育與經驗談：國二上數學篇──因式分解與一元二次方程式（上） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/66f79061-a594-4608-bb85-c4a2ad786310.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">對一年級有基礎的人來說，問題往往不大，但就是這個基礎兩字，通常國一爆掉的，就筆者個人經驗，學生都是放棄，父母怎樣逼都沒用，送補習班也只是聊勝於無。所以怎麼辦？建議，找安親化的補習班或家教，不要再管進度了，因為他就是已經跟不上，逼著做沒意義，基本作業完成就好，不會的就慢慢追上來。</figcaption>
 <h2>一元二次方程式</h2>
 <p>嚴格說，因式分解跟十字交乘法很熟，這邊不會有問題，因為只是多個等號：</p>
 <p>x^2+x-2= (x-1)(x+2) </p>
