--- a/_posts/2022-03-07-VOCUS-軍事事務改革-的問題-9.html
+++ b/_posts/2022-03-07-VOCUS-軍事事務改革-的問題-9.html
@@ -11,8 +11,7 @@ author: 王立第二戰研所
 <blockquote>於國軍這種大型組織，擾動的效果會優於破壞，搖動的效果高於推倒，在我們無法砍掉重練的前提上，本就只能先求有再求好，若凡事都要一次到定位，做不到就是怪人家黃埔爛。……….欸，真的很爛又怎樣，現實改變了什麼？<br>
 <br>
 喊一百次美軍接管、代訓台灣新軍，美國人就點頭了？</blockquote>
-<p><br></p>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/61d7d596fd897800015ab384">軍事事務改革......的問題（8） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/6e3edecc-368a-4722-a7ac-e303c58f5fe9.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">依照現在的狀況，每一個鼓吹開放的，都不在意軍方的管理負擔，以及警察的監管責任。好像這些都是權利，風險都是別人的。我們膝蓋想也知道，軍警必定會是靶場的監管單位，他們突然多了一堆事要做又沒利益，誰想做啊。沒有利益，人就不會行動，靶場如此，其他的改革也是如此。 政治實務, 軍事改革, 軍事普及, 後備動員</figcaption>
 <p>好了，也該總結。</p>
 <p>講了八周的改革問題，好像說了很多，但又什麼都沒說……吧？</p>
 <p>其實這才正常，因為我們在談概念，如果要進到具體的計畫，像是文職人員要聘幾個，根據什麼聘，聘期幾年，可接觸到何種程度的資料等，那就不是我們在部落格講講就可以得出結論的東西。</p>
@@ -30,7 +29,7 @@ author: 王立第二戰研所
 <p>總之改革需要很多錢，但問題不是缺錢而已，常常是你動了一個部份，後面整個都要動。又如常有人說，一般士兵訓練應該要怎樣精實等等，那這個精實是針對志願役還是義務役？我們針對的對象，平均學歷素質等等能一體運用嗎？有想夠多就會知道，後勤作業一打開，是動一條就牽動幾十條，沒那麼簡單。</p>
 <p>也就是今天的怠惰跟無效訓練，其實是某一種平衡，即便這種平衡是很爛，但起碼是一個平衡。你要破壞，就得要付出資源跟時間，無論好的或壞的方面，總之沒有什麼打破就打破，該離職就離職。說的豪氣干雲，那為何說的都是那些不用自己去做的人？</p>
 <p>舉個例子，我們現在學美國的標準，軍官體適能每年測驗，未達標準警告，再次就強制退伍，這過得了嗎？筆者也曉得這主意不壞，民眾應該也很支持，只是推得動嗎？軍方不是沒有反制的方法，光是在軍購或是其他方面，拖執政黨後腿，就夠搞死你。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/46121385-babc-4a77-8c3c-e641eeeb8052.jpg">
 <p>筆者想要表達的是，到了這種程度就已經脫離單純紙面計畫，你得要認識夠多的人，組成夠強的派系。以政治人物來說，就是某個人當了院長後，他是不是口袋名單有一打的將軍，不是忠誠有問題的牆頭草，是真的自己人，足以直接替換掉重要職位，去強力推行自己的意志？</p>
 <p>如果沒有，那就得玩弄權術，好比設立某個標準，軍方5成的人支持、3成無所謂，剩下2成的一半投靠你，另一半反對你。然後用這些願意投靠的人，聯合支持者去推動。還是你覺得，走在正義的道路上，就算9成的人都反對，我們還是要堅定地推動到底？</p>
 <p>都確定會失敗的，推動的意義在哪？除了浪費時間跟得到一群心懷怨懟者，就只能滿足那種孤高傲骨的安慰心理。</p>
@@ -41,5 +40,5 @@ author: 王立第二戰研所
 <p>而要促成一個產業，讓軍官有第二條出路，不能僅考慮現在的狀況。筆者說的是真正的產業，並非那種考戰研所後去當戰略研究或顧問的，這職位能有幾個？也不是讓他們去業界當主管，用軍事經驗去管理廠務，這有適性的問題，某些工廠適合，有些屬性就是不合。</p>
 <p>不管是讓台灣有民間的射擊遊戲、訓練產業，或是多很多戰鬥營，鼓勵全民接觸軍事事務，當作一種運動等等，國家的軍事平均值本就是存在這些生活之中。</p>
 <p>一個國家沒人要投入軍事相關的行業，只是嘴巴說重視，或只想要等軍隊變成自己喜歡的樣子再說，會成功都是運氣好矇到的。</p>
-<p><br></p>
-<p>透過娛樂作品提昇軍隊形象或許也是一種方式，只是台灣最後拍成了完全無關的女兵日記。（圖為韓國連續劇<a href="https://zh.wikipedia.org/zh-tw/%E5%A4%AA%E9%99%BD%E7%9A%84%E5%BE%8C%E8%A3%94">太陽的後裔</a>，描述軍官跟女醫的愛情故事）</p>
+<img src="https://images.vocus.cc/2062a776-d80e-4eab-8e96-d77f13579375.jpg">
+<figcaption class="imageCaption draft-block" style="cursor:text;display:block">透過娛樂作品提昇軍隊形象或許也是一種方式，只是台灣最後拍成了完全無關的女兵日記。（圖為韓國連續劇<a href="https://zh.wikipedia.org/zh-tw/%E5%A4%AA%E9%99%BD%E7%9A%84%E5%BE%8C%E8%A3%94">太陽的後裔</a>，描述軍官跟女醫的愛情故事）</figcaption>
