--- a/_posts/2022-03-22-VOCUS-方格子電台-podcast-ep23-緊急插播-最新烏俄開戰局勢.html
+++ b/_posts/2022-03-22-VOCUS-方格子電台-podcast-ep23-緊急插播-最新烏俄開戰局勢.html
@@ -10,10 +10,8 @@ author: 王立第二戰研所
 
 <div class="draft-block draft--p left">全新集數EP.23已上線</div>
 <div class="draft-block draft--p left">每週一更新：時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://open.firstory.me/story/cl01y2zjh01d00842m2ye9djz/platforms" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/e8ff02ff-59c5-4db7-94c0-5927e4044a4e.jpg" data-width="1200" data-height="630" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/e8ff02ff-59c5-4db7-94c0-5927e4044a4e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content"><span style="font-weight: bold; ">培養軍事常識跟破解謠言的心態</span></div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">點此用喜歡的方式收聽節目▶︎▷<a href="https://open.firstory.me/story/cl01y2zjh01d00842m2ye9djz/platforms" target="_blank" class="draft--a">《方格子電台-王立第二戰研所》</a></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 ZmUQI draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 bHwnUx draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dTIYWL"></pre></div>
 <blockquote class="draft-block draft--blockquote">本集更新<br>EP23：緊急插播！最新烏俄開戰局勢</blockquote>
@@ -45,4 +43,3 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">基本上，再次強調</div>
 <div class="draft-block draft--p left">大家都是看資料判斷，因為坦克不會插翅膀飛天，戰略上沒有神算。而且，每個國家的真實軍隊戰力，都是看實戰才知道，然後我們才能依據現況去調整評估。</div>
 <div class="draft-block draft--p left">我這邊不是占卜預言中心，想找看看有沒放空投資機會的請去其他地方。</div>
-<div class="draft-block draft--p left"></div>
