--- a/_posts/2022-03-22-VOCUS-方格子電台-podcast-ep26-巡弋飛彈與長程火箭彈襲台論.html
+++ b/_posts/2022-03-22-VOCUS-方格子電台-podcast-ep26-巡弋飛彈與長程火箭彈襲台論.html
@@ -10,10 +10,8 @@ author: 王立第二戰研所
 
 <div class="draft-block draft--p left">全新集數EP.26已上線</div>
 <div class="draft-block draft--p left">每週一更新：時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://open.firstory.me/story/cl0g3jqza4rj2084222s0rhr1/platforms" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/4587ee6e-e3cc-4f2b-8c91-4c127753b7b7.png" data-width="1360" data-height="713" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/4587ee6e-e3cc-4f2b-8c91-4c127753b7b7.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">巡弋飛彈與長程火箭彈襲台論</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">點此用喜歡的方式收聽節目▶︎▷<a href="https://open.firstory.me/story/cl0g3jqza4rj2084222s0rhr1/platforms" target="_blank" class="draft--a">《方格子電台-王立第二戰研所》</a></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 ZmUQI draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 bHwnUx draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dTIYWL"></pre></div>
 <blockquote class="draft-block draft--blockquote">本集更新<br>EP26：巡弋飛彈與長程火箭彈襲台論</blockquote>
