--- a/_posts/2022-03-28-VOCUS-方格子電台-podcast-ep1-全新第二季開播-台灣的升學主義現象.html
+++ b/_posts/2022-03-28-VOCUS-方格子電台-podcast-ep1-全新第二季開播-台灣的升學主義現象.html
@@ -10,8 +10,7 @@ author: 王立第二戰研所
 
 <div class="draft-block draft--p left">全新一季EP.1已上線</div>
 <div class="draft-block draft--p left">每週一更新：時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://open.firstory.me/story/cl1a4gilj06kb0hzqbtqddkhf/platforms" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/a7a47b6a-2fae-47d1-95aa-1091a72fec1d.jpg" data-width="1200" data-height="630" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/a7a47b6a-2fae-47d1-95aa-1091a72fec1d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">關於教育大小事，台灣的升學主義現象</div></div>
 <div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">點此用喜歡的方式收聽節目▶︎▷<a href="https://open.firstory.me/story/cl1a4gilj06kb0hzqbtqddkhf/platforms" target="_blank" class="draft--a">《方格子電台-王立第二戰研所》</a></div>
