--- a/_posts/2022-03-29-VOCUS-關於意識形態的雜談-3.html
+++ b/_posts/2022-03-29-VOCUS-關於意識形態的雜談-3.html
@@ -9,8 +9,7 @@ author: 王立第二戰研所
 ---
 
 <blockquote class="draft-block draft--blockquote">所以，筆者這周想說的是，不要覺得自己應該要屬於哪一派、相信哪種主義、信仰何種理念，然後才去找「相符合的行動」去參與。你應該是先認識一個議題，然後本身有自己的偏好，透過跟人討論的過程，了解到這個議題的本質，若需要行動改變，那麼將會付出多少成本，或是遇到多大風險，我們能否承受，等等的各種爭辯。最後，你會在好幾個議題的討論中，確認自己的偏好，此時才比較能夠說，自己屬於何種意識形態。</blockquote>
-<div class="embed-block-prerender" data-vocus="true" data-url="https://vocus.cc/article/6228b5f3fd8978000104437b" data-title="關於意識形態的雜談（2） | 王立第二戰研所 - vocus" data-description="到此，筆者覺得各位應該有一個簡單的概念，意識形態其實是一種，屬於我們偏好的項目。極端意識形態，並不是什麼不講理還是怎樣，只是偏好強烈到「只有開車才是真理派」、「沒有高鐵寧可在家派」這種，所以遇到各種科學問題，我們會覺得不可理喻，理由其實是人家認為「高鐵停駛我就不去高雄了啊」，對他來說搭高鐵這件事情比出遊重要。 ..." data-providername="Vocus" data-backgroundimageurl="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252Fdddba26d-8341-4cb9-9d09-1ded98bb7a8c.jpg%26width%3D1200%26sign%3DUVyh7b4sJdlU6FOMmqyebsybhCca2teB6mXMzh3WaB4&width=550&sign=Ze88NT0gp3lSHlqniGNK-JQgf2jo8eAZvBMWloZ2zYk"></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><h3><a href="https://vocus.cc/article/6228b5f3fd8978000104437b">關於意識形態的雜談（2） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/dddba26d-8341-4cb9-9d09-1ded98bb7a8c.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">到此，筆者覺得各位應該有一個簡單的概念，意識形態其實是一種，屬於我們偏好的項目。極端意識形態，並不是什麼不講理還是怎樣，只是偏好強烈到「只有開車才是真理派」、「沒有高鐵寧可在家派」這種，所以遇到各種科學問題，我們會覺得不可理喻，理由其實是人家認為「高鐵停駛我就不去高雄了啊」，對他來說搭高鐵這件事情比出遊重要。 ...</figcaption></div>
 <div class="draft-block draft--p left">講了兩周意識形態偏好，那麼我們該怎樣去看議題，開始進入我們說的左右派等等分類？</div>
 <div class="draft-block draft--p left">嗯，各位曉得，光分類就有分派別，還分到吵起來嗎？唯一有共識的大概是左右派的歷史，起源自法國大革命時的<a href="https://zh.wikipedia.org/wiki/%E5%9C%8B%E6%B0%91%E8%AD%B0%E6%9C%83_(%E6%B3%95%E5%9C%8B%E5%A4%A7%E9%9D%A9%E5%91%BD)" target="_blank" class="draft--a">國民議會</a>，保王黨坐在右邊，革命黨在左邊。其他的大概是眾說紛紜，甚至還有人堅稱只有自己的分類法是對的，別人不照他的分法都是錯的，「他一定沒讀書哈哈哈」（可以看看有多少人會這樣）。</div>
 <div class="draft-block draft--p left">所以這是怎麼回事？呃，其實是有比較近代的定義，但算是一種歸納法，不過不是每個人都承認，而且要理解這道理，就得要先<span style="font-weight: bold; ">跳脫「左右的分野是固定的」</span>，故先擱置到後面再說。</div>
@@ -18,7 +17,7 @@ author: 王立第二戰研所
 <h3 class="draft-block draft--h3" name="header-a2mh4">自由派與保守派的差別是「改革的力道」</h3>
 <div class="draft-block draft--p left">左右派的最基本定義，如果要從歷史根源，也就是保王黨屬右派、革命黨算左派區分，那麼就可以將「革新 – 保守」當作一個簡易光譜，而這個光譜在最初的討論，根據的是「現狀的改變」。也請注意，打一開始，屬於光譜的保守主張，也不是反對改變，而是反對「激烈的變革」。</div>
 <div class="draft-block draft--p left">換言之，在這個光譜上，若我們數字化，將毫無改變當作是0，支持立刻改變的改革派放在左邊，反對激烈改變的保守派置於右邊，大體上可以做出下圖（這筆者記得做過好幾次）。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1216px" class="image-block-prerender" data-src="https://images.vocus.cc/604039d9-2eac-4359-9ea4-b3817a6757f9.jpg" data-width="1216" data-height="229" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/604039d9-2eac-4359-9ea4-b3817a6757f9.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">請注意這是光譜區間，數字只是一種視覺化概念，不是絕對的意思。換句話說，左右派真正的原始概念，其實是「針對現狀」進行改變的討論，而且這個光譜代表的，不是議題式的改變，算是一種概念性的變化。</div>
 <div class="draft-block draft--p left">嗯，這樣講很難懂，我們用學校營養午餐來解釋。假設現在營養午餐費用每人每天50元，就這樣一直吃下去，都沒有人提出任何的要求跟改變，那麼此時「不存在自由或保守派」。但這實際上是不可能的，因為口味每個人都不同，就算常態編班的學校，家長背景也不盡相同，對於午餐的水準要求也自然不一樣。</div>
 <div class="draft-block draft--p left">所以，真正的狀態是，對於「某議題」永遠都存在廣義上的自由與保守派，但也不能說這就是絕對的自由或保守派。</div>
@@ -27,7 +26,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">台灣大多數現在判定對方屬於何類者，大多是看到單一議題的表態，就認定他必然屬於特定意識形態，進而覺得對方一定也會認同這個意識形態群體的其他看法。</div>
 <div class="draft-block draft--p left">回到三菜一湯這個午餐議題上，當多數人想要改革這個菜色時，真有幾個素食主義者，認為三青菜才健康，堅決反對改變的，就是所謂的最右邊，數值屬於負數的<span style="font-style: italic; ">。</span></div>
 <div class="draft-block draft--p left">但也不能說這就是反動派，真正的反動派會說「三道菜的油要換成植物油，湯品中也不能用丸子增添味道，這樣對學生才健康」，不僅反對改變還不滿現狀。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:968px" class="image-block-prerender" data-src="https://images.vocus.cc/7f25c936-8950-4c73-8736-c9ce88ce47d6.png" data-width="968" data-height="766" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">編：但會做到這種程度的還是少數（翻攝自<a href="https://www.independent.co.uk/news/world/americas/vegan-couple-murder-baby-starve-ryan-patrick-o-leary-sheila-florida-a9255046.html" target="_blank" class="draft--a">獨立報</a>）。</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/7f25c936-8950-4c73-8736-c9ce88ce47d6.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">編：但會做到這種程度的還是少數（翻攝自<a href="https://www.independent.co.uk/news/world/americas/vegan-couple-murder-baby-starve-ryan-patrick-o-leary-sheila-florida-a9255046.html" target="_blank" class="draft--a">獨立報</a>）。</figcaption></div>
 <div class="draft-block draft--p left">若你站在改變的角度去看，素食主義者其實也要歸類到最左邊的激進改革。這才是所謂極左極右很像的理由，並不是兩者「殊途同歸」，你會覺得素食主義跟肉食主義兩者都同類？結果最好會一樣啦<span style="font-weight: bold; ">（網路這類說法通常比較像是想把極端派都歸納到同一類上，便於批判）</span>。</div>
 <div class="draft-block draft--p left">但會造成現在這種營養午餐菜色，總有各種現實的理由在，諸如肉品有夠貴買不起，附近沒有合格廠商所以買不到。這種理由提出來，保守派中會有人接受（數值幾乎到0那種），之所以反對立刻改變也並非無所本，也就是若條件適合下就接受改變。故我們不能把反對改變，直接當成反動派（負數）去看待。</div>
 <h3 class="draft-block draft--h3" name="header-8eu13">要改都可以改，改革的成本你買單？</h3>
@@ -42,6 +41,6 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">有人會覺得，法律沒有禁止，就不該另立校規；也有人認為，法律外的校規也有一定的秩序維護效果，不要太離譜遵守也無妨。總之呢，各式各樣的議題，每個人都會有不同的見解，這些偏好來源跟家長的社經背景都有關係。</div>
 <div class="draft-block draft--p left">當你所有的議題都有概念，並且做出了自己的判斷後，若可以把每一個議題都標上分數，就能抓一個總分，好比說他拿了80分是偏自由派，你得了30分偏保守派。這就是大部分意識形態光譜測驗的概念來源，只是多數題目就筆者的角度來說，頗有相當的誘導意味就是。</div>
 <div class="draft-block draft--p left">總之呢，你會是一個自由派，並不代表你就會無條件支持頭髮解禁，有人提出一個「染髮要有限度」，身為家長的你也可能投贊成票。因為對你來說，學生頭髮挑染沒關係，但弄成超級賽亞人就太驚悚。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:565px" class="image-block-prerender" data-src="https://images.vocus.cc/a9e64f5a-3603-4b84-b0d1-e882c1eed154.jpg" data-width="565" data-height="714" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">編：科學派頂多接受到「不了解科學」</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/a9e64f5a-3603-4b84-b0d1-e882c1eed154.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">編：科學派頂多接受到「不了解科學」</figcaption></div>
 <div class="draft-block draft--p left">因為每個人對於各種議題的支持度，都有不同的層次，贊成髮禁的人想的可能只是不要染髮，也不接受我們當年的西瓜皮造型。而這些必須透過對話，不停的討論，才能取得共識。</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">請注意，「層次」這件事的重要性，那麼你我會發現，意識形態的光譜，只要不是只有兩個選項，在多層次分類下，把總人數攤開下去，也會是常態分布。</div></div>
